--- a/src/Ryujinx/Assets/Locales/es_ES.json
+++ b/src/Ryujinx/Assets/Locales/es_ES.json
@@ -10,7 +10,10 @@
   "SettingsTabSystemUseHypervisor": "Usar hipervisor",
   "MenuBarFile": "_Archivo",
   "MenuBarFileOpenFromFile": "_Cargar aplicación desde un archivo",
+  "MenuBarFileOpenFromFileError": "No se han encontrado aplicaciones en el archivo seleccionado.",
   "MenuBarFileOpenUnpacked": "Cargar juego _desempaquetado",
+  "MenuBarFileLoadDlcFromFolder": "Cargar DLC Desde el Mapa",
+  "MenuBarFileLoadTitleUpdatesFromFolder": "Cargar Actualizaciones de Título Desde el Mapa",
   "MenuBarFileOpenEmuFolder": "Abrir carpeta de Ryujinx",
   "MenuBarFileOpenLogsFolder": "Abrir carpeta de registros",
   "MenuBarFileExit": "_Salir",
@@ -97,12 +100,14 @@
   "SettingsTabGeneralCheckUpdatesOnLaunch": "Buscar actualizaciones al iniciar",
   "SettingsTabGeneralShowConfirmExitDialog": "Mostrar diálogo de confirmación al cerrar",
   "SettingsTabGeneralRememberWindowState": "Remember Window Size/Position",
-  "SettingsTabGeneralShowTitleBar": "Show Title Bar (Requires restart)",
+  "SettingsTabGeneralShowTitleBar": "Mostrar barra de título (requiere reiniciar)",
   "SettingsTabGeneralHideCursor": "Esconder el cursor:",
   "SettingsTabGeneralHideCursorNever": "Nunca",
   "SettingsTabGeneralHideCursorOnIdle": "Ocultar cursor cuando esté inactivo",
   "SettingsTabGeneralHideCursorAlways": "Siempre",
   "SettingsTabGeneralGameDirectories": "Carpetas de juegos",
+  "SettingsTabGeneralAutoloadDirectories": "Carga automática de carpetas DLC/Actualizaciones",
+  "SettingsTabGeneralAutoloadNote": "Los DLC y actualizaciones que hacen referencia a archivos faltantes se descargarán automáticamente.",
   "SettingsTabGeneralAdd": "Agregar",
   "SettingsTabGeneralRemove": "Quitar",
   "SettingsTabSystem": "Sistema",
@@ -411,6 +416,7 @@
   "GameListContextMenuToggleFavorite": "Marcar favorito",
   "GameListContextMenuToggleFavoriteToolTip": "Marca o desmarca el juego como favorito",
   "SettingsTabGeneralTheme": "Tema:",
+  "SettingsTabGeneralThemeAuto": "Automático",
   "SettingsTabGeneralThemeDark": "Oscuro",
   "SettingsTabGeneralThemeLight": "Claro",
   "ControllerSettingsConfigureGeneral": "Configurar",
@@ -561,6 +567,9 @@
   "AddGameDirBoxTooltip": "Elige un directorio de juegos para mostrar en la ventana principal",
   "AddGameDirTooltip": "Agrega un directorio de juegos a la lista",
   "RemoveGameDirTooltip": "Quita el directorio seleccionado de la lista",
+  "AddAutoloadDirBoxTooltip": "Introduzca un mapa de carga automática para agregarlo a la lista",
+  "AddAutoloadDirTooltip": "Agregar un mapa de carga automática a la lista",
+  "RemoveAutoloadDirTooltip": "Eliminar el mapa de carga automática seleccionado",
   "CustomThemeCheckTooltip": "Activa o desactiva los temas personalizados para la interfaz",
   "CustomThemePathTooltip": "Carpeta que contiene los temas personalizados para la interfaz",
   "CustomThemeBrowseTooltip": "Busca un tema personalizado para la interfaz",
@@ -606,6 +615,8 @@
   "DebugLogTooltip": "Escribe mensajes de debug en la consola\n\nActiva esto solo si un miembro del equipo te lo pide expresamente, pues hará que el registro sea difícil de leer y empeorará el rendimiento del emulador.",
   "LoadApplicationFileTooltip": "Abre el explorador de archivos para elegir un archivo compatible con Switch para cargar",
   "LoadApplicationFolderTooltip": "Abre el explorador de archivos para elegir un archivo desempaquetado y compatible con Switch para cargar",
+  "LoadDlcFromFolderTooltip": "Abra un explorador de archivos para elegir una o más carpetas desde las cuales cargar DLC de forma masiva",
+  "LoadTitleUpdatesFromFolderTooltip": "Abra un explorador de archivos para elegir una o más carpetas desde las cuales cargar en forma masiva actualizaciones de títulos",
   "OpenRyujinxFolderTooltip": "Abre la carpeta de sistema de Ryujinx",
   "OpenRyujinxLogsTooltip": "Abre la carpeta en la que se guardan los registros",
   "ExitTooltip": "Cierra Ryujinx",
@@ -657,6 +668,8 @@
   "OpenSetupGuideMessage": "Abrir la guía de instalación",
   "NoUpdate": "No actualizado",
   "TitleUpdateVersionLabel": "Versión {0} - {1}",
+  "TitleBundledUpdateVersionLabel": "Incluye: versión {0}",
+  "TitleBundledDlcLabel": "Agrupado:",
   "RyujinxInfo": "Ryujinx - Info",
   "RyujinxConfirm": "Ryujinx - Confirmación",
   "FileDialogAllTypes": "Todos los tipos",
@@ -722,6 +735,14 @@
   "Cancel": "Cancelar",
   "Save": "Guardar",
   "Discard": "Descartar",
+  "UpdateWindowBundledContentNotice": "Las actualizaciones incluidas no se pueden eliminar, solo desactivar",
+  "AutoloadDlcAddedMessage": "{0} contenido descargable agregado",
+  "AutoloadDlcRemovedMessage": "{0} contenido descargable eliminado",
+  "AutoloadUpdateAddedMessage": "{0} actualización agregada",
+  "AutoloadUpdateRemovedMessage": "{0} actualización eliminada",
+  "DlcWindowBundledContentNotice": "El DLC \"incluido\" no se puede eliminar, sólo desactivarlo.",
+  "DlcWindowDlcAddedMessage": "{0} DLC agregado",
+  "UpdateWindowUpdateAddedMessage": "{0} actualización agregada",
   "Paused": "Pausado",
   "UserProfilesSetProfileImage": "Elegir Imagen de Perfil ",
   "UserProfileEmptyNameError": "El nombre es obligatorio",
@@ -767,6 +788,7 @@
   "GraphicsScalingFilterBilinear": "Bilinear\n",
   "GraphicsScalingFilterNearest": "Cercano",
   "GraphicsScalingFilterFsr": "FSR",
+  "GraphicsScalingFilterArea": "Área",
   "GraphicsScalingFilterLevelLabel": "Nivel",
   "GraphicsScalingFilterLevelTooltip": "Ajuste el nivel de nitidez FSR 1.0. Mayor es más nítido.",
   "SmaaLow": "SMAA Bajo",
