fix/release pipeline and locales translations

--- a/src/Ryujinx/Assets/Locales/nl_NL.json
+++ b/src/Ryujinx/Assets/Locales/nl_NL.json
@@ -205,7 +205,7 @@
   "SettingsTabInputEnableDockedMode": "Docked Modus",
   "SettingsTabInputDirectKeyboardAccess": "Directe Toetsenbord Toegang",
   "SettingsButtonSave": "Opslaan",
-  "SettingsButtonClose": "Close",
+  "SettingsButtonClose": "Sluiten",
   "SettingsButtonOk": "OKE",
   "SettingsButtonCancel": "Annuleren",
   "SettingsButtonApply": "Toepassen",
@@ -221,7 +221,7 @@
   "ControllerSettingsHandheld": "Handheld",
   "ControllerSettingsInputDevice": "Invoerapparaat",
   "ControllerSettingsRefresh": "Vernieuwen",
-  "ControllerSettingsDeviceDisabled": "Disabled",
+  "ControllerSettingsDeviceDisabled": "Uitgeschakeld",
   "ControllerSettingsControllerType": "Controller Type",
   "ControllerSettingsControllerTypeHandheld": "Handheld",
   "ControllerSettingsControllerTypeProController": "Pro Controller",
