--- a/src/Ryujinx/Assets/Locales/en_US.json
+++ b/src/Ryujinx/Assets/Locales/en_US.json
@@ -33,6 +33,7 @@
   "MenuBarToolsManageFileTypes": "Manage file types",
   "MenuBarToolsInstallFileTypes": "Install file types",
   "MenuBarToolsUninstallFileTypes": "Uninstall file types",
+  "MenuBarToolsXCITrimmer": "Trim XCI Files",
   "MenuBarView": "_View",
   "MenuBarViewWindow": "Window Size",
   "MenuBarViewWindow720": "720p",
@@ -84,8 +85,11 @@
   "GameListContextMenuOpenModsDirectoryToolTip": "Opens the directory which contains Application's Mods",
   "GameListContextMenuOpenSdModsDirectory": "Open Atmosphere Mods Directory",
   "GameListContextMenuOpenSdModsDirectoryToolTip": "Opens the alternative SD card Atmosphere directory which contains Application's Mods. Useful for mods that are packaged for real hardware.",
+  "GameListContextMenuTrimXCI": "Check and Trim XCI File",
+  "GameListContextMenuTrimXCIToolTip": "Check and Trim XCI File to Save Disk Space",
   "StatusBarGamesLoaded": "{0}/{1} Games Loaded",
   "StatusBarSystemVersion": "System Version: {0}",
+  "StatusBarXCIFileTrimming": "Trimming XCI File '{0}'",
   "LinuxVmMaxMapCountDialogTitle": "Low limit for memory mappings detected",
   "LinuxVmMaxMapCountDialogTextPrimary": "Would you like to increase the value of vm.max_map_count to {0}",
   "LinuxVmMaxMapCountDialogTextSecondary": "Some games might try to create more memory mappings than currently allowed. Ryujinx will crash as soon as this limit gets exceeded.",
@@ -400,6 +404,8 @@
   "InputDialogTitle": "Input Dialog",
   "InputDialogOk": "OK",
   "InputDialogCancel": "Cancel",
+  "InputDialogCancelling": "Cancelling",
+  "InputDialogClose": "Close",
   "InputDialogAddNewProfileTitle": "Choose the Profile Name",
   "InputDialogAddNewProfileHeader": "Please Enter a Profile Name",
   "InputDialogAddNewProfileSubtext": "(Max Length: {0})",
@@ -468,6 +474,7 @@
   "DialogUninstallFileTypesSuccessMessage": "Successfully uninstalled file types!",
   "DialogUninstallFileTypesErrorMessage": "Failed to uninstall file types.",
   "DialogOpenSettingsWindowLabel": "Open Settings Window",
+  "DialogOpenXCITrimmerWindowLabel": "XCI Trimmer Window",
   "DialogControllerAppletTitle": "Controller Applet",
   "DialogMessageDialogErrorExceptionMessage": "Error displaying Message Dialog: {0}",
   "DialogSoftwareKeyboardErrorExceptionMessage": "Error displaying Software Keyboard: {0}",
@@ -670,6 +677,12 @@
   "TitleUpdateVersionLabel": "Version {0}",
   "TitleBundledUpdateVersionLabel": "Bundled: Version {0}",
   "TitleBundledDlcLabel": "Bundled:",
+  "TitleXCIStatusPartialLabel": "Partial",
+  "TitleXCIStatusTrimmableLabel": "Untrimmed",
+  "TitleXCIStatusUntrimmableLabel": "Trimmed",
+  "TitleXCIStatusFailedLabel": "(Failed)",
+  "TitleXCICanSaveLabel": "Save {0:n0} Mb",
+  "TitleXCISavingLabel": "Saved {0:n0} Mb",
   "RyujinxInfo": "Ryujinx - Info",
   "RyujinxConfirm": "Ryujinx - Confirmation",
   "FileDialogAllTypes": "All types",
@@ -722,11 +735,37 @@
   "SelectDlcDialogTitle": "Select DLC files",
   "SelectUpdateDialogTitle": "Select update files",
   "SelectModDialogTitle": "Select mod directory",
+  "TrimXCIFileDialogTitle": "Check and Trim XCI File",
+  "TrimXCIFileDialogPrimaryText": "This function will first check the empty space and then trim the XCI File to save disk space.",
+  "TrimXCIFileDialogSecondaryText": "Current File Size: {0:n} MB\nGame Data Size: {1:n} MB\nDisk Space Savings: {2:n} MB",
+  "TrimXCIFileNoTrimNecessary": "XCI File does not need to be trimmed. Check logs for further details",
+  "TrimXCIFileNoUntrimPossible": "XCI File cannot be untrimmed. Check logs for further details",
+  "TrimXCIFileReadOnlyFileCannotFix": "XCI File is Read Only and could not be made writable. Check logs for further details",
+  "TrimXCIFileFileSizeChanged": "XCI File has changed in size since it was scanned. Please check the file is not being written to and try again.",
+  "TrimXCIFileFreeSpaceCheckFailed": "XCI File has data in the free space area, it is not safe to trim",
+  "TrimXCIFileInvalidXCIFile": "XCI File contains invalid data. Check logs for further details",
+  "TrimXCIFileFileIOWriteError": "XCI File could not be opened for writing. Check logs for further details",
+  "TrimXCIFileFailedPrimaryText": "Trimming of the XCI file failed",
+  "TrimXCIFileCancelled": "The operation was cancelled",
+  "TrimXCIFileFileUndertermined": "No operation was performed",
   "UserProfileWindowTitle": "User Profiles Manager",
   "CheatWindowTitle": "Cheats Manager",
   "DlcWindowTitle": "Manage Downloadable Content for {0} ({1})",
   "ModWindowTitle": "Manage Mods for {0} ({1})",
   "UpdateWindowTitle": "Title Update Manager",
+  "XCITrimmerWindowTitle": "XCI File Trimmer",
+  "XCITrimmerTitleStatusCount": "{0} of {1} Title(s) Selected",
+  "XCITrimmerTitleStatusCountWithFilter": "{0} of {1} Title(s) Selected ({2} displayed)",
+  "XCITrimmerTitleStatusTrimming": "Trimming {0} Title(s)...",
+  "XCITrimmerTitleStatusUntrimming": "Untrimming {0} Title(s)...",
+  "XCITrimmerTitleStatusFailed": "Failed",
+  "XCITrimmerPotentialSavings": "Potential Savings",
+  "XCITrimmerActualSavings": "Actual Savings",
+  "XCITrimmerSavingsMb": "{0:n0} Mb",
+  "XCITrimmerSelectDisplayed": "Select Shown",
+  "XCITrimmerDeselectDisplayed": "Deselect Shown",
+  "XCITrimmerSortName": "Title",
+  "XCITrimmerSortSaved": "Space Savings",
   "UpdateWindowUpdateAddedMessage": "{0} new update(s) added",
   "UpdateWindowBundledContentNotice": "Bundled updates cannot be removed, only disabled.",
   "CheatWindowHeading": "Cheats Available for {0} [{1}]",
@@ -740,6 +779,7 @@
   "AutoloadUpdateRemovedMessage": "{0} missing update(s) removed",
   "ModWindowHeading": "{0} Mod(s)",
   "UserProfilesEditProfile": "Edit Selected",
+  "Continue": "Continue",
   "Cancel": "Cancel",
   "Save": "Save",
   "Discard": "Discard",
