--- a/src/Ryujinx/Assets/Locales/en_US.json
+++ b/src/Ryujinx/Assets/Locales/en_US.json
@@ -534,10 +534,8 @@
   "AboutAmiiboDisclaimerMessage": "AmiiboAPI (www.amiiboapi.com) is used\nin our Amiibo emulation.",
   "AboutPatreonUrlTooltipMessage": "Click to open the Ryujinx Patreon page in your default browser.",
   "AboutGithubUrlTooltipMessage": "Click to open the Ryujinx GitHub page in your default browser.",
-  "AboutDiscordUrlTooltipMessage": "Click to open an invite to the Ryujinx Discord server in your default browser.",
-  "AboutTwitterUrlTooltipMessage": "Click to open the Ryujinx Twitter page in your default browser.",
   "AboutRyujinxAboutTitle": "About:",
-  "AboutRyujinxAboutContent": "Ryujinx is an emulator for the Nintendo Switch™.\nPlease support us on Patreon.\nGet all the latest news on our Twitter or Discord.\nDevelopers interested in contributing can find out more on our GitHub or Discord.",
+  "AboutRyujinxAboutContent": "Ryujinx is an emulator for the Nintendo Switch™.\nDevelopers interested in contributing can find out more on our GitHub or Discord.",
   "AboutRyujinxMaintainersTitle": "Maintained By:",
   "AboutRyujinxMaintainersContentTooltipMessage": "Click to open the Contributors page in your default browser.",
   "AboutRyujinxSupprtersTitle": "Supported on Patreon By:",
