--- a/src/Ryujinx/Assets/Locales/zh_CN.json
+++ b/src/Ryujinx/Assets/Locales/zh_CN.json
@@ -533,10 +533,8 @@
   "AboutAmiiboDisclaimerMessage": "我们的 Amiibo 模拟使用了\nAmiiboAPI (www.amiiboapi.com)。",
   "AboutPatreonUrlTooltipMessage": "在浏览器中打开 Ryujinx 的 Patreon 赞助页。",
   "AboutGithubUrlTooltipMessage": "在浏览器中打开 Ryujinx 的 GitHub 代码库。",
-  "AboutDiscordUrlTooltipMessage": "在浏览器中打开 Ryujinx 的 Discord 邀请链接。",
-  "AboutTwitterUrlTooltipMessage": "在浏览器中打开 Ryujinx 的 Twitter 主页。",
   "AboutRyujinxAboutTitle": "关于：",
-  "AboutRyujinxAboutContent": "Ryujinx 是一款 Nintendo Switch™ 模拟器。\n您可以在 Patreon 上赞助 Ryujinx。\n关注 Twitter 或 Discord 可以获取模拟器最新动态。\n如果您对开发感兴趣，欢迎来 GitHub 或 Discord 加入我们！",
+  "AboutRyujinxAboutContent": "Ryujinx 是一款 Nintendo Switch™ 模拟器。\n如果您对开发感兴趣，欢迎来 GitHub 或 Discord 加入我们！",
   "AboutRyujinxMaintainersTitle": "开发维护人员名单：",
   "AboutRyujinxMaintainersContentTooltipMessage": "在浏览器中打开贡献者页面",
   "AboutRyujinxSupprtersTitle": "感谢 Patreon 上的赞助者：",
