--- a/src/Ryujinx/Assets/Locales/de_DE.json
+++ b/src/Ryujinx/Assets/Locales/de_DE.json
@@ -449,7 +449,7 @@
   "DialogUpdaterNoInternetMessage": "Es besteht keine Verbindung mit dem Internet!",
   "DialogUpdaterNoInternetSubMessage": "Bitte vergewissern, dass eine funktionierende Internetverbindung existiert!",
   "DialogUpdaterDirtyBuildMessage": "Inoffizielle Versionen von Ryujinx können nicht aktualisiert werden",
-  "DialogUpdaterDirtyBuildSubMessage": "Lade Ryujinx bitte von hier herunter, um eine unterstützte Version zu erhalten: https://https://github.com/fsegurai/Ryujinx/releases/",
+  "DialogUpdaterDirtyBuildSubMessage": "Lade Ryujinx bitte von hier herunter, um eine unterstützte Version zu erhalten: https://github.com/fsegurai/Ryujinx/releases/",
   "DialogRestartRequiredMessage": "Neustart erforderlich",
   "DialogThemeRestartMessage": "Das Design wurde gespeichert. Ein Neustart ist erforderlich, um das Design anzuwenden.",
   "DialogThemeRestartSubMessage": "Jetzt neu starten?",
