--- a/src/Ryujinx/Assets/Locales/he_IL.json
+++ b/src/Ryujinx/Assets/Locales/he_IL.json
@@ -449,7 +449,7 @@
   "DialogUpdaterNoInternetMessage": "אתם לא מחוברים לאינטרנט!",
   "DialogUpdaterNoInternetSubMessage": "אנא ודא שיש לך חיבור אינטרנט תקין!",
   "DialogUpdaterDirtyBuildMessage": "אתם לא יכולים לעדכן מבנה מלוכלך של ריוג'ינקס!",
-  "DialogUpdaterDirtyBuildSubMessage": "אם אתם מחפשים גרסא נתמכת, אנא הורידו את ריוג'ינקס בכתובת https://https://github.com/fsegurai/Ryujinx/releases",
+  "DialogUpdaterDirtyBuildSubMessage": "אם אתם מחפשים גרסא נתמכת, אנא הורידו את ריוג'ינקס בכתובת https://github.com/fsegurai/Ryujinx/releases",
   "DialogRestartRequiredMessage": "אתחול נדרש",
   "DialogThemeRestartMessage": "ערכת הנושא נשמרה. יש צורך בהפעלה מחדש כדי להחיל את ערכת הנושא.",
   "DialogThemeRestartSubMessage": "האם ברצונך להפעיל מחדש?",
