--- a/src/Ryujinx/Assets/Locales/uk_UA.json
+++ b/src/Ryujinx/Assets/Locales/uk_UA.json
@@ -449,7 +449,7 @@
   "DialogUpdaterNoInternetMessage": "Ви не підключені до Інтернету!",
   "DialogUpdaterNoInternetSubMessage": "Будь ласка, переконайтеся, що у вас є робоче підключення до Інтернету!",
   "DialogUpdaterDirtyBuildMessage": "Ви не можете оновити брудну збірку Ryujinx!",
-  "DialogUpdaterDirtyBuildSubMessage": "Будь ласка, завантажте Ryujinx на https://https://github.com/fsegurai/Ryujinx/releases/, якщо ви шукаєте підтримувану версію.",
+  "DialogUpdaterDirtyBuildSubMessage": "Будь ласка, завантажте Ryujinx на https://github.com/fsegurai/Ryujinx/releases/, якщо ви шукаєте підтримувану версію.",
   "DialogRestartRequiredMessage": "Потрібен перезапуск",
   "DialogThemeRestartMessage": "Тему збережено. Щоб застосувати тему, потрібен перезапуск.",
   "DialogThemeRestartSubMessage": "Ви хочете перезапустити",
