--- a/src/Ryujinx/Assets/Locales/th_TH.json
+++ b/src/Ryujinx/Assets/Locales/th_TH.json
@@ -107,6 +107,7 @@
   "SettingsTabGeneralHideCursorAlways": "ตลอดเวลา",
   "SettingsTabGeneralGameDirectories": "ไดเรกทอรี่ของเกม",
   "SettingsTabGeneralAutoloadDirectories": "โหลดไดเรกทอรี DLC/ไฟล์อัปเดต อัตโนมัติ",
+  "SettingsTabGeneralAutoloadNote": "DLC and Updates which refer to missing files will be unloaded automatically",
   "SettingsTabGeneralAdd": "เพิ่ม",
   "SettingsTabGeneralRemove": "เอาออก",
   "SettingsTabSystem": "ระบบ",
@@ -533,6 +534,7 @@
   "AboutAmiiboDisclaimerMessage": "AmiiboAPI (www.amiiboapi.com) ถูกใช้\nในการจำลอง อะมิโบ ของเรา",
   "AboutPatreonUrlTooltipMessage": "คลิกเพื่อเปิดหน้า Patreon ของ Ryujinx บนเบราว์เซอร์เริ่มต้นของคุณ",
   "AboutGithubUrlTooltipMessage": "คลิกเพื่อเปิดหน้า Github ของ Ryujinx  บนเบราว์เซอร์เริ่มต้นของคุณ",
+  "AboutDiscordUrlTooltipMessage": "คลิกเพื่อเปิดคำเชิญเข้าสู่เซิร์ฟเวอร์ Discord ของ Ryujinx บนเบราว์เซอร์เริ่มต้นของคุณ",
   "AboutRyujinxAboutTitle": "เกี่ยวกับ:",
   "AboutRyujinxAboutContent": "Ryujinx เป็นอีมูเลเตอร์สำหรับ Nintendo Switch™\nนักพัฒนาที่สนใจจะมีส่วนร่วมสามารถดูข้อมูลเพิ่มเติมได้ที่ GitHub หรือ Discord ของเรา",
   "AboutRyujinxMaintainersTitle": "ได้รับการดูแลโดย:",
@@ -732,8 +734,9 @@
   "DlcWindowHeading": "{0} DLC ที่สามารถดาวน์โหลดได้",
   "DlcWindowDlcAddedMessage": "{0} DLC ใหม่ที่เพิ่มเข้ามา",
   "AutoloadDlcAddedMessage": "{0} ใหม่ที่เพิ่มเข้ามา",
+  "AutoloadDlcRemovedMessage": "{0} missing downloadable content(s) removed",
   "AutoloadUpdateAddedMessage": "{0} อัพเดตใหม่ที่เพิ่มเข้ามา",
-  "AutoloadDlcAndUpdateAddedMessage": "{0} DLC ใหม่ที่เพิ่มเข้ามาและ {1} อัพเดตใหม่ที่เพิ่มเข้ามา",
+  "AutoloadUpdateRemovedMessage": "{0} missing update(s) removed",
   "ModWindowHeading": "{0} ม็อด",
   "UserProfilesEditProfile": "แก้ไขที่เลือกแล้ว",
   "Cancel": "ยกเลิก",
