--- a/src/Ryujinx/Assets/Locales/zh_CN.json
+++ b/src/Ryujinx/Assets/Locales/zh_CN.json
@@ -107,6 +107,7 @@
   "SettingsTabGeneralHideCursorAlways": "始终隐藏",
   "SettingsTabGeneralGameDirectories": "游戏目录",
   "SettingsTabGeneralAutoloadDirectories": "自动加载DLC/游戏更新目录",
+  "SettingsTabGeneralAutoloadNote": "DLC and Updates which refer to missing files will be unloaded automatically",
   "SettingsTabGeneralAdd": "添加",
   "SettingsTabGeneralRemove": "删除",
   "SettingsTabSystem": "系统",
@@ -533,6 +534,7 @@
   "AboutAmiiboDisclaimerMessage": "我们的 Amiibo 模拟使用了\nAmiiboAPI (www.amiiboapi.com)。",
   "AboutPatreonUrlTooltipMessage": "在浏览器中打开 Ryujinx 的 Patreon 赞助页。",
   "AboutGithubUrlTooltipMessage": "在浏览器中打开 Ryujinx 的 GitHub 代码库。",
+  "AboutDiscordUrlTooltipMessage": "在浏览器中打开 Ryujinx 的 Discord 邀请链接。",
   "AboutRyujinxAboutTitle": "关于：",
   "AboutRyujinxAboutContent": "Ryujinx 是一款 Nintendo Switch™ 模拟器。\n如果您对开发感兴趣，欢迎来 GitHub 或 Discord 加入我们！",
   "AboutRyujinxMaintainersTitle": "开发维护人员名单：",
@@ -732,8 +734,9 @@
   "DlcWindowHeading": "{0} 个 DLC",
   "DlcWindowDlcAddedMessage": "{0} 个DLC被添加",
   "AutoloadDlcAddedMessage": "{0} 个DLC被添加",
+  "AutoloadDlcRemovedMessage": "{0} missing downloadable content(s) removed",
   "AutoloadUpdateAddedMessage": "{0} 个游戏更新被添加",
-  "AutoloadDlcAndUpdateAddedMessage": "{0} 个DLC和{1} 个游戏更新被添加",
+  "AutoloadUpdateRemovedMessage": "{0} missing update(s) removed",
   "ModWindowHeading": "{0} Mod(s)",
   "UserProfilesEditProfile": "编辑所选",
   "Cancel": "取消",
