--- a/src/Ryujinx/Assets/Locales/fr_FR.json
+++ b/src/Ryujinx/Assets/Locales/fr_FR.json
@@ -100,7 +100,7 @@
   "SettingsTabGeneralCheckUpdatesOnLaunch": "Vérifier les mises à jour au démarrage",
   "SettingsTabGeneralShowConfirmExitDialog": "Afficher le message de \"Confirmation de sortie\"",
   "SettingsTabGeneralRememberWindowState": "Mémoriser la taille/position de la fenêtre",
-  "SettingsTabGeneralShowTitleBar": "Show Title Bar (Requires restart)",
+  "SettingsTabGeneralShowTitleBar": "Afficher Barre de Titre (Nécessite redémarrage)",
   "SettingsTabGeneralHideCursor": "Masquer le Curseur :",
   "SettingsTabGeneralHideCursorNever": "Jamais",
   "SettingsTabGeneralHideCursorOnIdle": "Masquer le curseur si inactif",
@@ -534,6 +534,7 @@
   "AboutAmiiboDisclaimerMessage": "AmiiboAPI (www.amiiboapi.com) est utilisé\ndans notre émulation Amiibo.",
   "AboutPatreonUrlTooltipMessage": "Cliquez pour ouvrir la page Patreon de Ryujinx dans votre navigateur par défaut.",
   "AboutGithubUrlTooltipMessage": "Cliquez pour ouvrir la page GitHub de Ryujinx dans votre navigateur par défaut.",
+  "AboutDiscordUrlTooltipMessage": "Cliquez pour ouvrir une invitation au serveur Discord de Ryujinx dans votre navigateur par défaut.",
   "AboutRyujinxAboutTitle": "À propos :",
   "AboutRyujinxAboutContent": "Ryujinx est un émulateur pour la Nintendo Switch™.\nLes développeurs intéressés à contribuer peuvent en savoir plus sur notre GitHub ou notre Discord.",
   "AboutRyujinxMaintainersTitle": "Maintenu par :",
