--- a/src/Ryujinx/Assets/Locales/he_IL.json
+++ b/src/Ryujinx/Assets/Locales/he_IL.json
@@ -10,7 +10,10 @@
   "SettingsTabSystemUseHypervisor": "השתמש ב Hypervisor",
   "MenuBarFile": "_קובץ",
   "MenuBarFileOpenFromFile": "_טען יישום מקובץ",
+  "MenuBarFileOpenFromFileError": "No applications found in selected file.",
   "MenuBarFileOpenUnpacked": "טען משחק _שאינו ארוז",
+  "MenuBarFileLoadDlcFromFolder": "Load DLC From Folder",
+  "MenuBarFileLoadTitleUpdatesFromFolder": "Load Title Updates From Folder",
   "MenuBarFileOpenEmuFolder": "פתח את תיקיית ריוג'ינקס",
   "MenuBarFileOpenLogsFolder": "פתח את תיקיית קבצי הלוג",
   "MenuBarFileExit": "_יציאה",
@@ -103,6 +106,8 @@
   "SettingsTabGeneralHideCursorOnIdle": "במצב סרק",
   "SettingsTabGeneralHideCursorAlways": "תמיד",
   "SettingsTabGeneralGameDirectories": "תקיות משחקים",
+  "SettingsTabGeneralAutoloadDirectories": "Autoload DLC/Updates Directories",
+  "SettingsTabGeneralAutoloadNote": "DLC and Updates which refer to missing files will be unloaded automatically",
   "SettingsTabGeneralAdd": "הוסף",
   "SettingsTabGeneralRemove": "הסר",
   "SettingsTabSystem": "מערכת",
@@ -411,6 +416,7 @@
   "GameListContextMenuToggleFavorite": "למתג העדפה",
   "GameListContextMenuToggleFavoriteToolTip": "למתג סטטוס העדפה של משחק",
   "SettingsTabGeneralTheme": "ערכת נושא:",
+  "SettingsTabGeneralThemeAuto": "Auto",
   "SettingsTabGeneralThemeDark": "כהה",
   "SettingsTabGeneralThemeLight": "בהיר",
   "ControllerSettingsConfigureGeneral": "הגדר",
@@ -528,6 +534,7 @@
   "AboutAmiiboDisclaimerMessage": "ממשק אמיבו (www.amiiboapi.com) משומש בהדמיית האמיבו שלנו.",
   "AboutPatreonUrlTooltipMessage": "לחץ כדי לפתוח את דף הפטראון של ריוג'ינקס בדפדפן ברירת המחדל שלך.",
   "AboutGithubUrlTooltipMessage": "לחץ כדי לפתוח את דף הגיטהב של ריוג'ינקס בדפדפן ברירת המחדל שלך.",
+  "AboutDiscordUrlTooltipMessage": "לחץ כדי לפתוח הזמנה לשרת הדיסקורד של ריוג'ינקס בדפדפן ברירת המחדל שלך.",
   "AboutRyujinxAboutTitle": "אודות:",
   "AboutRyujinxAboutContent": "ריוג'ינקס הוא אמולטור עבור הנינטנדו סוויץ' (כל הזכויות שמורות).\nמפתחים המעוניינים לתרום יכולים לקבל מידע נוסף ב-גיטהאב או ב-דיסקורד שלנו.",
   "AboutRyujinxMaintainersTitle": "מתוחזק על ידי:",
@@ -559,6 +566,9 @@
   "AddGameDirBoxTooltip": "הזן תקיית משחקים כדי להוסיף לרשימה",
   "AddGameDirTooltip": "הוסף תקיית משחקים לרשימה",
   "RemoveGameDirTooltip": "הסר את תקיית המשחקים שנבחרה",
+  "AddAutoloadDirBoxTooltip": "Enter an autoload directory to add to the list",
+  "AddAutoloadDirTooltip": "Add an autoload directory to the list",
+  "RemoveAutoloadDirTooltip": "Remove selected autoload directory",
   "CustomThemeCheckTooltip": "השתמש בעיצוב מותאם אישית של אבלוניה עבור ה-ממשק הגראפי כדי לשנות את המראה של תפריטי האמולטור",
   "CustomThemePathTooltip": "נתיב לערכת נושא לממשק גראפי מותאם אישית",
   "CustomThemeBrowseTooltip": "חפש עיצוב ממשק גראפי מותאם אישית",
@@ -604,6 +614,8 @@
   "DebugLogTooltip": "מדפיס הודעות יומן ניפוי באגים בשורת הפקודות.",
   "LoadApplicationFileTooltip": "פתח סייר קבצים כדי לבחור קובץ תואם סוויץ' לטעינה",
   "LoadApplicationFolderTooltip": "פתח סייר קבצים כדי לבחור יישום תואם סוויץ', לא ארוז לטעינה.",
+  "LoadDlcFromFolderTooltip": "Open a file explorer to choose one or more folders to bulk load DLC from",
+  "LoadTitleUpdatesFromFolderTooltip": "Open a file explorer to choose one or more folders to bulk load title updates from",
   "OpenRyujinxFolderTooltip": "פתח את תיקיית מערכת הקבצים ריוג'ינקס",
   "OpenRyujinxLogsTooltip": "פותח את התיקיה שאליה נכתבים רישומים",
   "ExitTooltip": "צא מריוג'ינקס",
@@ -655,6 +667,8 @@
   "OpenSetupGuideMessage": "פתח מדריך התקנה",
   "NoUpdate": "אין עדכון",
   "TitleUpdateVersionLabel": "גרסה {0}",
+  "TitleBundledUpdateVersionLabel": "Bundled: Version {0}",
+  "TitleBundledDlcLabel": "Bundled:",
   "RyujinxInfo": "ריוג'ינקס - מידע",
   "RyujinxConfirm": "ריוג'ינקס - אישור",
   "FileDialogAllTypes": "כל הסוגים",
@@ -712,9 +726,17 @@
   "DlcWindowTitle": "נהל הרחבות משחק עבור {0} ({1})",
   "ModWindowTitle": "Manage Mods for {0} ({1})",
   "UpdateWindowTitle": "נהל עדכוני משחקים",
+  "UpdateWindowUpdateAddedMessage": "{0} new update(s) added",
+  "UpdateWindowBundledContentNotice": "Bundled updates cannot be removed, only disabled.",
   "CheatWindowHeading": "צ'יטים זמינים עבור {0} [{1}]",
   "BuildId": "מזהה בניה:",
+  "DlcWindowBundledContentNotice": "Bundled DLC cannot be removed, only disabled.",
   "DlcWindowHeading": "{0} הרחבות משחק",
+  "DlcWindowDlcAddedMessage": "{0} new downloadable content(s) added",
+  "AutoloadDlcAddedMessage": "{0} new downloadable content(s) added",
+  "AutoloadDlcRemovedMessage": "{0} missing downloadable content(s) removed",
+  "AutoloadUpdateAddedMessage": "{0} new update(s) added",
+  "AutoloadUpdateRemovedMessage": "{0} missing update(s) removed",
   "ModWindowHeading": "{0} מוד(ים)",
   "UserProfilesEditProfile": "ערוך נבחר/ים",
   "Cancel": "בטל",
@@ -765,6 +787,7 @@
   "GraphicsScalingFilterBilinear": "Bilinear",
   "GraphicsScalingFilterNearest": "Nearest",
   "GraphicsScalingFilterFsr": "FSR",
+  "GraphicsScalingFilterArea": "Area",
   "GraphicsScalingFilterLevelLabel": "רמה",
   "GraphicsScalingFilterLevelTooltip": "Set FSR 1.0 sharpening level. Higher is sharper.",
   "SmaaLow": "SMAA נמוך",
