--- a/src/Ryujinx/Assets/Locales/it_IT.json
+++ b/src/Ryujinx/Assets/Locales/it_IT.json
@@ -534,6 +534,7 @@
   "AboutAmiiboDisclaimerMessage": "AmiiboAPI (www.amiiboapi.com) è usata\nnella nostra emulazione Amiibo.",
   "AboutPatreonUrlTooltipMessage": "Clicca per aprire la pagina Patreon di Ryujinx nel tuo browser predefinito.",
   "AboutGithubUrlTooltipMessage": "Clicca per aprire la pagina GitHub di Ryujinx nel tuo browser predefinito.",
+  "AboutDiscordUrlTooltipMessage": "Clicca per aprire un invito al server Discord di Ryujinx nel tuo browser predefinito.",
   "AboutRyujinxAboutTitle": "Informazioni:",
   "AboutRyujinxAboutContent": "Ryujinx è un emulatore per la console Nintendo Switch™.\nGli sviluppatori interessati a contribuire possono trovare più informazioni sul nostro GitHub o Discord.",
   "AboutRyujinxMaintainersTitle": "Mantenuto da:",
@@ -786,12 +787,12 @@
   "GraphicsScalingFilterBilinear": "Bilineare",
   "GraphicsScalingFilterNearest": "Nearest",
   "GraphicsScalingFilterFsr": "FSR",
+  "GraphicsScalingFilterArea": "Area",
   "GraphicsScalingFilterLevelLabel": "Livello",
   "GraphicsScalingFilterLevelTooltip": "Imposta il livello di nitidezza di FSR 1.0. Valori più alti comportano una maggiore nitidezza.",
   "SmaaLow": "SMAA Basso",
   "SmaaMedium": "SMAA Medio",
   "SmaaHigh": "SMAA Alto",
-  "GraphicsScalingFilterArea": "Area",
   "SmaaUltra": "SMAA Ultra",
   "UserEditorTitle": "Modificare L'Utente",
   "UserEditorTitleCreate": "Crea Un Utente",
