--- a/src/Ryujinx/Assets/Locales/ko_KR.json
+++ b/src/Ryujinx/Assets/Locales/ko_KR.json
@@ -10,7 +10,10 @@
   "SettingsTabSystemUseHypervisor": "하이퍼바이저 사용하기",
   "MenuBarFile": "_파일",
   "MenuBarFileOpenFromFile": "_파일에서 응용 프로그램 불러오기",
+  "MenuBarFileOpenFromFileError": "No applications found in selected file.",
   "MenuBarFileOpenUnpacked": "_압축을 푼 게임 불러오기",
+  "MenuBarFileLoadDlcFromFolder": "Load DLC From Folder",
+  "MenuBarFileLoadTitleUpdatesFromFolder": "Load Title Updates From Folder",
   "MenuBarFileOpenEmuFolder": "Ryujinx 폴더 열기",
   "MenuBarFileOpenLogsFolder": "로그 폴더 열기",
   "MenuBarFileExit": "_종료",
@@ -103,6 +106,8 @@
   "SettingsTabGeneralHideCursorOnIdle": "유휴 상태",
   "SettingsTabGeneralHideCursorAlways": "언제나",
   "SettingsTabGeneralGameDirectories": "게임 디렉터리",
+  "SettingsTabGeneralAutoloadDirectories": "Autoload DLC/Updates Directories",
+  "SettingsTabGeneralAutoloadNote": "DLC and Updates which refer to missing files will be unloaded automatically",
   "SettingsTabGeneralAdd": "추가",
   "SettingsTabGeneralRemove": "제거",
   "SettingsTabSystem": "시스템",
@@ -411,6 +416,7 @@
   "GameListContextMenuToggleFavorite": "즐겨찾기 전환",
   "GameListContextMenuToggleFavoriteToolTip": "게임 즐겨찾기 상태 전환",
   "SettingsTabGeneralTheme": "테마:",
+  "SettingsTabGeneralThemeAuto": "Auto",
   "SettingsTabGeneralThemeDark": "어두운 테마",
   "SettingsTabGeneralThemeLight": "밝은 테마",
   "ControllerSettingsConfigureGeneral": "구성",
@@ -528,6 +534,7 @@
   "AboutAmiiboDisclaimerMessage": "AmiiboAPI (www.amiiboapi.com)는\nAmiibo 에뮬레이션에 사용됩니다.",
   "AboutPatreonUrlTooltipMessage": "기본 브라우저에서 Ryujinx Patreon 페이지를 열려면 클릭하세요.",
   "AboutGithubUrlTooltipMessage": "기본 브라우저에서 Ryujinx GitHub 페이지를 열려면 클릭하세요.",
+  "AboutDiscordUrlTooltipMessage": "기본 브라우저에서 Ryujinx 디스코드 서버에 대한 초대를 열려면 클릭하세요.",
   "AboutRyujinxAboutTitle": "정보 :",
   "AboutRyujinxAboutContent": "Ryujinx는 닌텐도 스위치™용 에뮬레이터입니다.\n기여에 참여하고자 하는 개발자는 GitHub 또는 디스코드에서 자세한 내용을 확인할 수 있습니다.",
   "AboutRyujinxMaintainersTitle": "유지 관리 :",
@@ -559,6 +566,9 @@
   "AddGameDirBoxTooltip": "목록에 추가할 게임 디렉터리 입력",
   "AddGameDirTooltip": "목록에 게임 디렉터리 추가",
   "RemoveGameDirTooltip": "선택한 게임 디렉터리 제거",
+  "AddAutoloadDirBoxTooltip": "Enter an autoload directory to add to the list",
+  "AddAutoloadDirTooltip": "Add an autoload directory to the list",
+  "RemoveAutoloadDirTooltip": "Remove selected autoload directory",
   "CustomThemeCheckTooltip": "GUI에 사용자 지정 Avalonia 테마를 사용하여 에뮬레이터 메뉴의 모양 변경",
   "CustomThemePathTooltip": "사용자 정의 GUI 테마 경로",
   "CustomThemeBrowseTooltip": "사용자 정의 GUI 테마 찾아보기",
@@ -604,6 +614,8 @@
   "DebugLogTooltip": "콘솔에 디버그 로그 메시지를 인쇄합니다.\n\n로그를 읽기 어렵게 만들고 에뮬레이터 성능을 악화시키므로 직원이 구체적으로 지시한 경우에만 사용하세요.",
   "LoadApplicationFileTooltip": "파일 탐색기를 열어 불러올 스위치 호환 파일 선택",
   "LoadApplicationFolderTooltip": "파일 탐색기를 열어 불러올 스위치 호환 압축 해제 응용 프로그램 선택",
+  "LoadDlcFromFolderTooltip": "Open a file explorer to choose one or more folders to bulk load DLC from",
+  "LoadTitleUpdatesFromFolderTooltip": "Open a file explorer to choose one or more folders to bulk load title updates from",
   "OpenRyujinxFolderTooltip": "Ryujinx 파일 시스템 폴더 열기",
   "OpenRyujinxLogsTooltip": "로그가 기록된 폴더 열기",
   "ExitTooltip": "Ryujinx 종료",
@@ -655,6 +667,8 @@
   "OpenSetupGuideMessage": "설정 가이드 열기",
   "NoUpdate": "업데이트 없음",
   "TitleUpdateVersionLabel": "버전 {0}",
+  "TitleBundledUpdateVersionLabel": "Bundled: Version {0}",
+  "TitleBundledDlcLabel": "Bundled:",
   "RyujinxInfo": "Ryujinx - 정보",
   "RyujinxConfirm": "Ryujinx - 확인",
   "FileDialogAllTypes": "모든 유형",
@@ -712,9 +726,17 @@
   "DlcWindowTitle": "{0} ({1})의 다운로드 가능한 콘텐츠 관리",
   "ModWindowTitle": "{0} ({1})의 Mod 관리",
   "UpdateWindowTitle": "타이틀 업데이트 관리자",
+  "UpdateWindowUpdateAddedMessage": "{0} new update(s) added",
+  "UpdateWindowBundledContentNotice": "Bundled updates cannot be removed, only disabled.",
   "CheatWindowHeading": "{0} [{1}]에 사용할 수 있는 치트",
   "BuildId": "빌드ID :",
+  "DlcWindowBundledContentNotice": "Bundled DLC cannot be removed, only disabled.",
   "DlcWindowHeading": "{0} 내려받기 가능한 콘텐츠",
+  "DlcWindowDlcAddedMessage": "{0} new downloadable content(s) added",
+  "AutoloadDlcAddedMessage": "{0} new downloadable content(s) added",
+  "AutoloadDlcRemovedMessage": "{0} missing downloadable content(s) removed",
+  "AutoloadUpdateAddedMessage": "{0} new update(s) added",
+  "AutoloadUpdateRemovedMessage": "{0} missing update(s) removed",
   "ModWindowHeading": "{0} Mod(s)",
   "UserProfilesEditProfile": "선택된 항목 편집",
   "Cancel": "취소",
@@ -765,6 +787,7 @@
   "GraphicsScalingFilterBilinear": "Bilinear",
   "GraphicsScalingFilterNearest": "Nearest",
   "GraphicsScalingFilterFsr": "FSR",
+  "GraphicsScalingFilterArea": "Area",
   "GraphicsScalingFilterLevelLabel": "수준",
   "GraphicsScalingFilterLevelTooltip": "FSR 1.0의 샤프닝 레벨을 설정하세요. 높을수록 더 또렷해집니다.",
   "SmaaLow": "SMAA 낮음",
