--- a/src/Ryujinx/Assets/Locales/tr_TR.json
+++ b/src/Ryujinx/Assets/Locales/tr_TR.json
@@ -10,7 +10,10 @@
   "SettingsTabSystemUseHypervisor": "Hypervisor Kullan",
   "MenuBarFile": "_Dosya",
   "MenuBarFileOpenFromFile": "_Dosyadan Uygulama Aç",
+  "MenuBarFileOpenFromFileError": "No applications found in selected file.",
   "MenuBarFileOpenUnpacked": "_Sıkıştırılmamış Oyun Aç",
+  "MenuBarFileLoadDlcFromFolder": "Load DLC From Folder",
+  "MenuBarFileLoadTitleUpdatesFromFolder": "Load Title Updates From Folder",
   "MenuBarFileOpenEmuFolder": "Ryujinx Klasörünü aç",
   "MenuBarFileOpenLogsFolder": "Logs Klasörünü aç",
   "MenuBarFileExit": "_Çıkış",
@@ -103,6 +106,8 @@
   "SettingsTabGeneralHideCursorOnIdle": "Hareketsiz Durumda",
   "SettingsTabGeneralHideCursorAlways": "Her Zaman",
   "SettingsTabGeneralGameDirectories": "Oyun Dizinleri",
+  "SettingsTabGeneralAutoloadDirectories": "Autoload DLC/Updates Directories",
+  "SettingsTabGeneralAutoloadNote": "DLC and Updates which refer to missing files will be unloaded automatically",
   "SettingsTabGeneralAdd": "Ekle",
   "SettingsTabGeneralRemove": "Kaldır",
   "SettingsTabSystem": "Sistem",
@@ -411,6 +416,7 @@
   "GameListContextMenuToggleFavorite": "Favori Ayarla",
   "GameListContextMenuToggleFavoriteToolTip": "Oyunu Favorilere Ekle/Çıkar",
   "SettingsTabGeneralTheme": "Tema:",
+  "SettingsTabGeneralThemeAuto": "Auto",
   "SettingsTabGeneralThemeDark": "Karanlık",
   "SettingsTabGeneralThemeLight": "Aydınlık",
   "ControllerSettingsConfigureGeneral": "Ayarla",
@@ -528,6 +534,7 @@
   "AboutAmiiboDisclaimerMessage": "Amiibo emülasyonumuzda \nAmiiboAPI (www.amiiboapi.com) kullanılmaktadır.",
   "AboutPatreonUrlTooltipMessage": "Ryujinx'in Patreon sayfasını varsayılan tarayıcınızda açmak için tıklayın.",
   "AboutGithubUrlTooltipMessage": "Ryujinx'in GitHub sayfasını varsayılan tarayıcınızda açmak için tıklayın.",
+  "AboutDiscordUrlTooltipMessage": "Varsayılan tarayıcınızda Ryujinx'in Discord'una bir davet açmak için tıklayın.",
   "AboutRyujinxAboutTitle": "Hakkında:",
   "AboutRyujinxAboutContent": "Ryujinx bir Nintendo Switch™ emülatörüdür.\nKatkıda bulunmak isteyen geliştiriciler GitHub veya Discord üzerinden daha fazla bilgi edinebilir.",
   "AboutRyujinxMaintainersTitle": "Geliştiriciler:",
@@ -559,6 +566,9 @@
   "AddGameDirBoxTooltip": "Listeye eklemek için oyun dizini seçin",
   "AddGameDirTooltip": "Listeye oyun dizini ekle",
   "RemoveGameDirTooltip": "Seçili oyun dizinini kaldır",
+  "AddAutoloadDirBoxTooltip": "Enter an autoload directory to add to the list",
+  "AddAutoloadDirTooltip": "Add an autoload directory to the list",
+  "RemoveAutoloadDirTooltip": "Remove selected autoload directory",
   "CustomThemeCheckTooltip": "Emülatör pencerelerinin görünümünü değiştirmek için özel bir Avalonia teması kullan",
   "CustomThemePathTooltip": "Özel arayüz temasının yolu",
   "CustomThemeBrowseTooltip": "Özel arayüz teması için göz at",
@@ -604,6 +614,8 @@
   "DebugLogTooltip": "Debug log mesajlarını konsola yazdırır.\n\nBu seçeneği yalnızca geliştirici üyemiz belirtirse aktifleştirin, çünkü bu seçenek log dosyasını okumayı zorlaştırır ve emülatörün performansını düşürür.",
   "LoadApplicationFileTooltip": "Switch ile uyumlu bir dosya yüklemek için dosya tarayıcısını açar",
   "LoadApplicationFolderTooltip": "Switch ile uyumlu ayrıştırılmamış bir uygulama yüklemek için dosya tarayıcısını açar",
+  "LoadDlcFromFolderTooltip": "Open a file explorer to choose one or more folders to bulk load DLC from",
+  "LoadTitleUpdatesFromFolderTooltip": "Open a file explorer to choose one or more folders to bulk load title updates from",
   "OpenRyujinxFolderTooltip": "Ryujinx dosya sistem klasörünü açar",
   "OpenRyujinxLogsTooltip": "Log dosyalarının bulunduğu klasörü açar",
   "ExitTooltip": "Ryujinx'ten çıkış yapmayı sağlar",
@@ -655,6 +667,8 @@
   "OpenSetupGuideMessage": "Kurulum Kılavuzunu Aç",
   "NoUpdate": "Güncelleme Yok",
   "TitleUpdateVersionLabel": "Sürüm {0} - {1}",
+  "TitleBundledUpdateVersionLabel": "Bundled: Version {0}",
+  "TitleBundledDlcLabel": "Bundled:",
   "RyujinxInfo": "Ryujinx - Bilgi",
   "RyujinxConfirm": "Ryujinx - Doğrulama",
   "FileDialogAllTypes": "Tüm türler",
@@ -712,9 +726,17 @@
   "DlcWindowTitle": "Oyun DLC'lerini Yönet",
   "ModWindowTitle": "Manage Mods for {0} ({1})",
   "UpdateWindowTitle": "Oyun Güncellemelerini Yönet",
+  "UpdateWindowUpdateAddedMessage": "{0} new update(s) added",
+  "UpdateWindowBundledContentNotice": "Bundled updates cannot be removed, only disabled.",
   "CheatWindowHeading": "{0} için Hile mevcut [{1}]",
   "BuildId": "BuildId:",
-  "DlcWindowHeading": "{0} için DLC mevcut [{1}]",
+  "DlcWindowBundledContentNotice": "Bundled DLC cannot be removed, only disabled.",
+  "DlcWindowHeading": "{0} Downloadable Content(s) available for {1} ({2})",
+  "DlcWindowDlcAddedMessage": "{0} new downloadable content(s) added",
+  "AutoloadDlcAddedMessage": "{0} new downloadable content(s) added",
+  "AutoloadDlcRemovedMessage": "{0} missing downloadable content(s) removed",
+  "AutoloadUpdateAddedMessage": "{0} new update(s) added",
+  "AutoloadUpdateRemovedMessage": "{0} missing update(s) removed",
   "ModWindowHeading": "{0} Mod(lar)",
   "UserProfilesEditProfile": "Seçiliyi Düzenle",
   "Cancel": "İptal",
@@ -765,6 +787,7 @@
   "GraphicsScalingFilterBilinear": "Bilinear",
   "GraphicsScalingFilterNearest": "Nearest",
   "GraphicsScalingFilterFsr": "FSR",
+  "GraphicsScalingFilterArea": "Area",
   "GraphicsScalingFilterLevelLabel": "Seviye",
   "GraphicsScalingFilterLevelTooltip": "Set FSR 1.0 sharpening level. Higher is sharper.",
   "SmaaLow": "Düşük SMAA",
