--- a/src/Ryujinx/Assets/Locales/uk_UA.json
+++ b/src/Ryujinx/Assets/Locales/uk_UA.json
@@ -10,7 +10,10 @@
   "SettingsTabSystemUseHypervisor": "Використовувати гіпервізор",
   "MenuBarFile": "_Файл",
   "MenuBarFileOpenFromFile": "_Завантажити програму з файлу",
+  "MenuBarFileOpenFromFileError": "No applications found in selected file.",
   "MenuBarFileOpenUnpacked": "Завантажити _розпаковану гру",
+  "MenuBarFileLoadDlcFromFolder": "Load DLC From Folder",
+  "MenuBarFileLoadTitleUpdatesFromFolder": "Load Title Updates From Folder",
   "MenuBarFileOpenEmuFolder": "Відкрити теку Ryujinx",
   "MenuBarFileOpenLogsFolder": "Відкрити теку журналів змін",
   "MenuBarFileExit": "_Вихід",
@@ -103,6 +106,8 @@
   "SettingsTabGeneralHideCursorOnIdle": "Сховати у режимі очікування",
   "SettingsTabGeneralHideCursorAlways": "Завжди",
   "SettingsTabGeneralGameDirectories": "Тека ігор",
+  "SettingsTabGeneralAutoloadDirectories": "Autoload DLC/Updates Directories",
+  "SettingsTabGeneralAutoloadNote": "DLC and Updates which refer to missing files will be unloaded automatically",
   "SettingsTabGeneralAdd": "Додати",
   "SettingsTabGeneralRemove": "Видалити",
   "SettingsTabSystem": "Система",
@@ -411,6 +416,7 @@
   "GameListContextMenuToggleFavorite": "Перемкнути вибране",
   "GameListContextMenuToggleFavoriteToolTip": "Перемкнути улюблений статус гри",
   "SettingsTabGeneralTheme": "Тема:",
+  "SettingsTabGeneralThemeAuto": "Auto",
   "SettingsTabGeneralThemeDark": "Темна",
   "SettingsTabGeneralThemeLight": "Світла",
   "ControllerSettingsConfigureGeneral": "Налаштування",
@@ -528,6 +534,7 @@
   "AboutAmiiboDisclaimerMessage": "AmiiboAPI (www.amiiboapi.com) використовується в нашій емуляції Amiibo.",
   "AboutPatreonUrlTooltipMessage": "Натисніть, щоб відкрити сторінку Patreon Ryujinx у вашому браузері за замовчування.",
   "AboutGithubUrlTooltipMessage": "Натисніть, щоб відкрити сторінку GitHub Ryujinx у браузері за замовчуванням.",
+  "AboutDiscordUrlTooltipMessage": "Натисніть, щоб відкрити запрошення на сервер Discord Ryujinx у браузері за замовчуванням.",
   "AboutRyujinxAboutTitle": "Про програму:",
   "AboutRyujinxAboutContent": "Ryujinx — це емулятор для Nintendo Switch™.\nРозробники, які хочуть зробити внесок, можуть дізнатися більше на нашому GitHub або в Discord.",
   "AboutRyujinxMaintainersTitle": "Підтримується:",
@@ -559,6 +566,9 @@
   "AddGameDirBoxTooltip": "Введіть каталог ігор, щоб додати до списку",
   "AddGameDirTooltip": "Додати каталог гри до списку",
   "RemoveGameDirTooltip": "Видалити вибраний каталог гри",
+  "AddAutoloadDirBoxTooltip": "Enter an autoload directory to add to the list",
+  "AddAutoloadDirTooltip": "Add an autoload directory to the list",
+  "RemoveAutoloadDirTooltip": "Remove selected autoload directory",
   "CustomThemeCheckTooltip": "Використовуйте користувацьку тему Avalonia для графічного інтерфейсу, щоб змінити вигляд меню емулятора",
   "CustomThemePathTooltip": "Шлях до користувацької теми графічного інтерфейсу",
   "CustomThemeBrowseTooltip": "Огляд користувацької теми графічного інтерфейсу",
@@ -604,6 +614,8 @@
   "DebugLogTooltip": "Друкує повідомлення журналу налагодження на консолі.\n\nВикористовуйте це лише за спеціальною вказівкою співробітника, оскільки це ускладнить читання журналів і погіршить роботу емулятора.",
   "LoadApplicationFileTooltip": "Відкриває файловий провідник, щоб вибрати для завантаження сумісний файл Switch",
   "LoadApplicationFolderTooltip": "Відкриває файловий провідник, щоб вибрати сумісну з комутатором розпаковану програму для завантаження",
+  "LoadDlcFromFolderTooltip": "Open a file explorer to choose one or more folders to bulk load DLC from",
+  "LoadTitleUpdatesFromFolderTooltip": "Open a file explorer to choose one or more folders to bulk load title updates from",
   "OpenRyujinxFolderTooltip": "Відкриває папку файлової системи Ryujinx",
   "OpenRyujinxLogsTooltip": "Відкриває папку, куди записуються журнали",
   "ExitTooltip": "Виходить з Ryujinx",
@@ -655,6 +667,8 @@
   "OpenSetupGuideMessage": "Відкрити посібник із налаштування",
   "NoUpdate": "Немає оновлень",
   "TitleUpdateVersionLabel": "Версія {0} - {1}",
+  "TitleBundledUpdateVersionLabel": "Bundled: Version {0}",
+  "TitleBundledDlcLabel": "Bundled:",
   "RyujinxInfo": "Ryujin x - Інформація",
   "RyujinxConfirm": "Ryujinx - Підтвердження",
   "FileDialogAllTypes": "Всі типи",
@@ -712,9 +726,17 @@
   "DlcWindowTitle": "Менеджер вмісту для завантаження",
   "ModWindowTitle": "Керувати модами для {0} ({1})",
   "UpdateWindowTitle": "Менеджер оновлення назв",
+  "UpdateWindowUpdateAddedMessage": "{0} new update(s) added",
+  "UpdateWindowBundledContentNotice": "Bundled updates cannot be removed, only disabled.",
   "CheatWindowHeading": "Коди доступні для {0} [{1}]",
   "BuildId": "ID збірки:",
+  "DlcWindowBundledContentNotice": "Bundled DLC cannot be removed, only disabled.",
   "DlcWindowHeading": "Вміст для завантаження, доступний для {1} ({2}): {0}",
+  "DlcWindowDlcAddedMessage": "{0} new downloadable content(s) added",
+  "AutoloadDlcAddedMessage": "{0} new downloadable content(s) added",
+  "AutoloadDlcRemovedMessage": "{0} missing downloadable content(s) removed",
+  "AutoloadUpdateAddedMessage": "{0} new update(s) added",
+  "AutoloadUpdateRemovedMessage": "{0} missing update(s) removed",
   "ModWindowHeading": "{0} мод(ів)",
   "UserProfilesEditProfile": "Редагувати вибране",
   "Cancel": "Скасувати",
@@ -765,6 +787,7 @@
   "GraphicsScalingFilterBilinear": "Білінійний",
   "GraphicsScalingFilterNearest": "Найближчий",
   "GraphicsScalingFilterFsr": "FSR",
+  "GraphicsScalingFilterArea": "Area",
   "GraphicsScalingFilterLevelLabel": "Рівень",
   "GraphicsScalingFilterLevelTooltip": "Встановити рівень різкості в FSR 1.0. Чим вище - тим різкіше.",
   "SmaaLow": "SMAA Низький",
