--- a/src/Ryujinx/Assets/Locales/de_DE.json
+++ b/src/Ryujinx/Assets/Locales/de_DE.json
@@ -437,7 +437,7 @@
   "DialogMessageFindSaveErrorMessage": "Es ist ein Fehler beim Suchen der angegebenen Speicherdaten aufgetreten: {0}",
   "FolderDialogExtractTitle": "Wähle den Ordner, in welchen die Dateien entpackt werden sollen",
   "DialogNcaExtractionMessage": "Extrahiert {0} abschnitt von {1}...",
-  "DialogNcaExtractionTitle": "Ryujinx - NCA-Abschnitt-Extraktor",
+  "DialogNcaExtractionTitle": "NCA-Abschnitt-Extraktor",
   "DialogNcaExtractionMainNcaNotFoundErrorMessage": "Extraktion fehlgeschlagen. Der Hauptheader der NCA war in der ausgewählten Datei nicht vorhanden.",
   "DialogNcaExtractionCheckLogErrorMessage": "Extraktion fehlgeschlagen. Überprüfe die Logs für weitere Informationen.",
   "DialogNcaExtractionSuccessMessage": "Extraktion erfolgreich abgeschlossen.",
