--- a/src/Ryujinx/Assets/Locales/es_ES.json
+++ b/src/Ryujinx/Assets/Locales/es_ES.json
@@ -437,7 +437,7 @@
   "DialogMessageFindSaveErrorMessage": "Hubo un error encontrando los datos de guardado especificados: {0}",
   "FolderDialogExtractTitle": "Elige la carpeta en la que deseas extraer",
   "DialogNcaExtractionMessage": "Extrayendo {0} sección de {1}...",
-  "DialogNcaExtractionTitle": "Ryujinx - Extractor de sección NCA",
+  "DialogNcaExtractionTitle": "Extractor de sección NCA",
   "DialogNcaExtractionMainNcaNotFoundErrorMessage": "Fallo de extracción. El NCA principal no estaba presente en el archivo seleccionado.",
   "DialogNcaExtractionCheckLogErrorMessage": "Fallo de extracción. Lee el registro para más información.",
   "DialogNcaExtractionSuccessMessage": "Se completó la extracción con éxito.",
