--- a/src/Ryujinx/Assets/Locales/fr_FR.json
+++ b/src/Ryujinx/Assets/Locales/fr_FR.json
@@ -437,7 +437,7 @@
   "DialogMessageFindSaveErrorMessage": "Une erreur s'est produite lors de la recherche de la sauvegarde spécifiée : {0}",
   "FolderDialogExtractTitle": "Choisissez le dossier dans lequel extraire",
   "DialogNcaExtractionMessage": "Extraction de la section {0} depuis {1}...",
-  "DialogNcaExtractionTitle": "Ryujinx - Extracteur de la section NCA",
+  "DialogNcaExtractionTitle": "Extracteur de la section NCA",
   "DialogNcaExtractionMainNcaNotFoundErrorMessage": "Échec de l'extraction. Le NCA principal n'était pas présent dans le fichier sélectionné.",
   "DialogNcaExtractionCheckLogErrorMessage": "Échec de l'extraction. Lisez le fichier journal pour plus d'informations.",
   "DialogNcaExtractionSuccessMessage": "Extraction terminée avec succès.",
