--- a/src/Ryujinx/Assets/Locales/it_IT.json
+++ b/src/Ryujinx/Assets/Locales/it_IT.json
@@ -437,7 +437,7 @@
   "DialogMessageFindSaveErrorMessage": "C'è stato un errore durante la ricerca dei dati di salvataggio: {0}",
   "FolderDialogExtractTitle": "Scegli una cartella in cui estrarre",
   "DialogNcaExtractionMessage": "Estrazione della sezione {0} da {1}...",
-  "DialogNcaExtractionTitle": "Ryujinx - Estrazione sezione NCA",
+  "DialogNcaExtractionTitle": "Estrazione sezione NCA",
   "DialogNcaExtractionMainNcaNotFoundErrorMessage": "L'estrazione è fallita. L'NCA principale non era presente nel file selezionato.",
   "DialogNcaExtractionCheckLogErrorMessage": "L'estrazione è fallita. Consulta il file di log per maggiori informazioni.",
   "DialogNcaExtractionSuccessMessage": "Estrazione completata con successo.",
