--- a/src/Ryujinx/Assets/Locales/ja_JP.json
+++ b/src/Ryujinx/Assets/Locales/ja_JP.json
@@ -437,7 +437,7 @@
   "DialogMessageFindSaveErrorMessage": "セーブデータ: {0} の検索中にエラーが発生しました",
   "FolderDialogExtractTitle": "展開フォルダを選択",
   "DialogNcaExtractionMessage": "{1} から {0} セクションを展開中...",
-  "DialogNcaExtractionTitle": "Ryujinx - NCA セクション展開",
+  "DialogNcaExtractionTitle": "NCA セクション展開",
   "DialogNcaExtractionMainNcaNotFoundErrorMessage": "展開に失敗しました. 選択されたファイルにはメイン NCA が存在しません.",
   "DialogNcaExtractionCheckLogErrorMessage": "展開に失敗しました. 詳細はログを確認してください.",
   "DialogNcaExtractionSuccessMessage": "展開が正常終了しました",
