--- a/src/Ryujinx/Assets/Locales/ko_KR.json
+++ b/src/Ryujinx/Assets/Locales/ko_KR.json
@@ -437,7 +437,7 @@
   "DialogMessageFindSaveErrorMessage": "지정된 저장 데이터를 찾는 중에 오류 발생: {0}",
   "FolderDialogExtractTitle": "추출할 폴더 선택",
   "DialogNcaExtractionMessage": "{1}에서 {0} 섹션을 추출하는 중...",
-  "DialogNcaExtractionTitle": "Ryujinx - NCA 섹션 추출기",
+  "DialogNcaExtractionTitle": "NCA 섹션 추출기",
   "DialogNcaExtractionMainNcaNotFoundErrorMessage": "추출 실패하였습니다. 선택한 파일에 기본 NCA가 없습니다.",
   "DialogNcaExtractionCheckLogErrorMessage": "추출 실패하였습니다. 자세한 내용은 로그 파일을 읽으세요.",
   "DialogNcaExtractionSuccessMessage": "추출이 성공적으로 완료되었습니다.",
