--- a/src/Ryujinx/Assets/Locales/pl_PL.json
+++ b/src/Ryujinx/Assets/Locales/pl_PL.json
@@ -437,7 +437,7 @@
   "DialogMessageFindSaveErrorMessage": "Wystąpił błąd podczas próby znalezienia określonych zapisanych danych: {0}",
   "FolderDialogExtractTitle": "Wybierz folder, do którego chcesz rozpakować",
   "DialogNcaExtractionMessage": "Wypakowywanie sekcji {0} z {1}...",
-  "DialogNcaExtractionTitle": "Ryujinx - Asystent wypakowania sekcji NCA",
+  "DialogNcaExtractionTitle": "Asystent wypakowania sekcji NCA",
   "DialogNcaExtractionMainNcaNotFoundErrorMessage": "Niepowodzenie podczas wypakowywania. W wybranym pliku nie było głównego NCA.",
   "DialogNcaExtractionCheckLogErrorMessage": "Niepowodzenie podczas wypakowywania. Przeczytaj plik dziennika, aby uzyskać więcej informacji.",
   "DialogNcaExtractionSuccessMessage": "Wypakowywanie zakończone pomyślnie.",
