--- a/src/Ryujinx/Assets/Locales/pt_BR.json
+++ b/src/Ryujinx/Assets/Locales/pt_BR.json
@@ -437,7 +437,7 @@
   "DialogMessageFindSaveErrorMessage": "Ocorreu um erro ao tentar encontrar o diretório de salvamento: {0}",
   "FolderDialogExtractTitle": "Escolha o diretório onde os arquivos serão extraídos",
   "DialogNcaExtractionMessage": "Extraindo seção {0} de {1}...",
-  "DialogNcaExtractionTitle": "Ryujinx - Extrator de seções NCA",
+  "DialogNcaExtractionTitle": "Extrator de seções NCA",
   "DialogNcaExtractionMainNcaNotFoundErrorMessage": "Falha na extração. O NCA principal não foi encontrado no arquivo selecionado.",
   "DialogNcaExtractionCheckLogErrorMessage": "Falha na extração. Leia o arquivo de log para mais informações.",
   "DialogNcaExtractionSuccessMessage": "Extração concluída com êxito.",
