--- a/src/Ryujinx/Assets/Locales/ru_RU.json
+++ b/src/Ryujinx/Assets/Locales/ru_RU.json
@@ -437,7 +437,7 @@
   "DialogMessageFindSaveErrorMessage": "Произошла ошибка при поиске указанных данных сохранения: {0}",
   "FolderDialogExtractTitle": "Выберите папку для извлечения",
   "DialogNcaExtractionMessage": "Извлечение {0} раздела из {1}...",
-  "DialogNcaExtractionTitle": "Ryujinx - Извлечение разделов NCA",
+  "DialogNcaExtractionTitle": "Извлечение разделов NCA",
   "DialogNcaExtractionMainNcaNotFoundErrorMessage": "Ошибка извлечения. Основной NCA не присутствовал в выбранном файле.",
   "DialogNcaExtractionCheckLogErrorMessage": "Ошибка извлечения. Прочтите файл журнала для получения дополнительной информации.",
   "DialogNcaExtractionSuccessMessage": "Извлечение завершено успешно.",
