--- a/src/Ryujinx/Assets/Locales/zh_CN.json
+++ b/src/Ryujinx/Assets/Locales/zh_CN.json
@@ -437,7 +437,7 @@
   "DialogMessageFindSaveErrorMessage": "查找指定存档时出错：{0}",
   "FolderDialogExtractTitle": "选择要提取到的文件夹",
   "DialogNcaExtractionMessage": "提取 {1} 的 {0} 分区...",
-  "DialogNcaExtractionTitle": "Ryujinx - NCA 分区提取",
+  "DialogNcaExtractionTitle": "NCA 分区提取",
   "DialogNcaExtractionMainNcaNotFoundErrorMessage": "提取失败，所选文件中没有 NCA 文件",
   "DialogNcaExtractionCheckLogErrorMessage": "提取失败，请查看日志文件获取详情",
   "DialogNcaExtractionSuccessMessage": "提取成功！",
