--- a/src/Ryujinx/Assets/Locales/zh_TW.json
+++ b/src/Ryujinx/Assets/Locales/zh_TW.json
@@ -437,7 +437,7 @@
   "DialogMessageFindSaveErrorMessage": "尋找指定的存檔時出現錯誤: {0}",
   "FolderDialogExtractTitle": "選擇要解壓到的資料夾",
   "DialogNcaExtractionMessage": "從 {1} 提取 {0} 分區...",
-  "DialogNcaExtractionTitle": "Ryujinx - NCA 分區提取器",
+  "DialogNcaExtractionTitle": "NCA 分區提取器",
   "DialogNcaExtractionMainNcaNotFoundErrorMessage": "提取失敗。所選檔案中不存在主 NCA 檔案。",
   "DialogNcaExtractionCheckLogErrorMessage": "提取失敗。請閱讀日誌檔案了解更多資訊。",
   "DialogNcaExtractionSuccessMessage": "提取成功。",
