--- a/src/Ryujinx/Assets/Locales/en_US.json
+++ b/src/Ryujinx/Assets/Locales/en_US.json
@@ -444,7 +444,7 @@
   "DialogMessageFindSaveErrorMessage": "There was an error finding the specified savedata: {0}",
   "FolderDialogExtractTitle": "Choose the folder to extract into",
   "DialogNcaExtractionMessage": "Extracting {0} section from {1}...",
-  "DialogNcaExtractionTitle": "Ryujinx - NCA Section Extractor",
+  "DialogNcaExtractionTitle": "NCA Section Extractor",
   "DialogNcaExtractionMainNcaNotFoundErrorMessage": "Extraction failure. The main NCA was not present in the selected file.",
   "DialogNcaExtractionCheckLogErrorMessage": "Extraction failed. Please check the log file for more details.",
   "DialogNcaExtractionSuccessMessage": "Extraction completed successfully.",
