--- a/src/Ryujinx/Assets/Locales/es_ES.json
+++ b/src/Ryujinx/Assets/Locales/es_ES.json
@@ -728,6 +728,8 @@
   "DlcWindowTitle": "Administrar contenido descargable",
   "ModWindowTitle": "Administrar Mods para {0} ({1})",
   "UpdateWindowTitle": "Administrar actualizaciones",
+  "XCITrimmerTrim": "Recortar",
+  "XCITrimmerUntrim": "Restaurar recorte",
   "UpdateWindowUpdateAddedMessage": "{0} nueva(s) actualización(es) agregada(s)",
   "UpdateWindowBundledContentNotice": "Las actualizaciones agrupadas no pueden ser eliminadas, solamente deshabilitadas.",
   "CheatWindowHeading": "Cheats disponibles para {0} [{1}]",
