feat/show changelog button in the Updater, for new updates & when you're on the latest version

--- a/src/Ryujinx/Assets/Locales/de_DE.json
+++ b/src/Ryujinx/Assets/Locales/de_DE.json
@@ -450,7 +450,8 @@
   "DialogUpdaterExtractionMessage": "Update wird entpackt...",
   "DialogUpdaterRenamingMessage": "Update wird umbenannt...",
   "DialogUpdaterAddingFilesMessage": "Update wird hinzugefügt...",
-  "DialogUpdaterCompleteMessage": "Update abgeschlossen!",
+  "DialogUpdaterShowChangelogMessage": "Changelog anzeigen",
+  "DialogUpdaterCompleteMessage",: "Update abgeschlossen!",
   "DialogUpdaterRestartMessage": "Ryujinx jetzt neu starten?",
   "DialogUpdaterNoInternetMessage": "Es besteht keine Verbindung mit dem Internet!",
   "DialogUpdaterNoInternetSubMessage": "Bitte vergewissern, dass eine funktionierende Internetverbindung existiert!",
