--- a/src/Ryujinx/Assets/Locales/ru_RU.json
+++ b/src/Ryujinx/Assets/Locales/ru_RU.json
@@ -450,6 +450,7 @@
   "DialogUpdaterExtractionMessage": "Извлечение обновления...",
   "DialogUpdaterRenamingMessage": "Переименование обновления...",
   "DialogUpdaterAddingFilesMessage": "Добавление нового обновления...",
+  "DialogUpdaterShowChangelogMessage": "Показать изменения",
   "DialogUpdaterCompleteMessage": "Обновление завершено",
   "DialogUpdaterRestartMessage": "Перезапустить Ryujinx?",
   "DialogUpdaterNoInternetMessage": "Вы не подключены к интернету",
