--- a/src/Ryujinx/Assets/Locales/ar_SA.json
+++ b/src/Ryujinx/Assets/Locales/ar_SA.json
@@ -450,6 +450,7 @@
   "DialogUpdaterExtractionMessage": "جاري استخراج التحديث...",
   "DialogUpdaterRenamingMessage": "إعادة تسمية التحديث...",
   "DialogUpdaterAddingFilesMessage": "إضافة تحديث جديد...",
+  "DialogUpdaterShowChangelogMessage": "عرض سجل التغييرات",
   "DialogUpdaterCompleteMessage": "اكتمل التحديث",
   "DialogUpdaterRestartMessage": "هل تريد إعادة تشغيل ريوجينكس الآن؟",
   "DialogUpdaterNoInternetMessage": "أنت غير متصل بالإنترنت.",
