--- a/src/Ryujinx/Assets/Locales/es_ES.json
+++ b/src/Ryujinx/Assets/Locales/es_ES.json
@@ -451,6 +451,7 @@
   "DialogUpdaterExtractionMessage": "Extrayendo actualización...",
   "DialogUpdaterRenamingMessage": "Renombrando actualización...",
   "DialogUpdaterAddingFilesMessage": "Aplicando actualización...",
+  "DialogUpdaterShowChangelogMessage": "Mostrar registro de cambios",
   "DialogUpdaterCompleteMessage": "¡Actualización completa!",
   "DialogUpdaterRestartMessage": "¿Quieres reiniciar Ryujinx?",
   "DialogUpdaterNoInternetMessage": "¡No estás conectado a internet!",
