--- a/src/Ryujinx/Assets/Locales/fr_FR.json
+++ b/src/Ryujinx/Assets/Locales/fr_FR.json
@@ -450,6 +450,7 @@
   "DialogUpdaterExtractionMessage": "Extraction de la mise à jour…",
   "DialogUpdaterRenamingMessage": "Renommage de la mise à jour...",
   "DialogUpdaterAddingFilesMessage": "Ajout d'une nouvelle mise à jour...",
+  "DialogUpdaterShowChangelogMessage": "Afficher le journal des modifications",
   "DialogUpdaterCompleteMessage": "Mise à jour terminée !",
   "DialogUpdaterRestartMessage": "Voulez-vous redémarrer Ryujinx maintenant ?",
   "DialogUpdaterNoInternetMessage": "Vous n'êtes pas connecté à Internet !",
