--- a/src/Ryujinx/Assets/Locales/it_IT.json
+++ b/src/Ryujinx/Assets/Locales/it_IT.json
@@ -457,6 +457,7 @@
   "DialogUpdaterExtractionMessage": "Estrazione dell'aggiornamento...",
   "DialogUpdaterRenamingMessage": "Rinominazione dell'aggiornamento...",
   "DialogUpdaterAddingFilesMessage": "Aggiunta del nuovo aggiornamento...",
+  "DialogUpdaterShowChangelogMessage": "Mostra il changelog",
   "DialogUpdaterCompleteMessage": "Aggiornamento completato!",
   "DialogUpdaterRestartMessage": "Vuoi riavviare Ryujinx adesso?",
   "DialogUpdaterNoInternetMessage": "Non sei connesso ad Internet!",
