--- a/src/Ryujinx/Assets/Locales/ja_JP.json
+++ b/src/Ryujinx/Assets/Locales/ja_JP.json
@@ -450,6 +450,7 @@
   "DialogUpdaterExtractionMessage": "アップデートを展開中...",
   "DialogUpdaterRenamingMessage": "アップデートをリネーム中...",
   "DialogUpdaterAddingFilesMessage": "新規アップデートを追加中...",
+  "DialogUpdaterShowChangelogMessage": "変更履歴を表示",
   "DialogUpdaterCompleteMessage": "アップデート完了!",
   "DialogUpdaterRestartMessage": "すぐに Ryujinx を再起動しますか?",
   "DialogUpdaterNoInternetMessage": "インターネットに接続されていません!",
