--- a/src/Ryujinx/Assets/Locales/pl_PL.json
+++ b/src/Ryujinx/Assets/Locales/pl_PL.json
@@ -450,6 +450,7 @@
   "DialogUpdaterExtractionMessage": "Wypakowywanie Aktualizacji...",
   "DialogUpdaterRenamingMessage": "Zmiana Nazwy Aktualizacji...",
   "DialogUpdaterAddingFilesMessage": "Dodawanie Nowej Aktualizacji...",
+  "DialogUpdaterShowChangelogMessage": "Pokaż Zmiany w Aktualizacji",
   "DialogUpdaterCompleteMessage": "Aktualizacja Zakończona!",
   "DialogUpdaterRestartMessage": "Czy chcesz teraz zrestartować Ryujinx?",
   "DialogUpdaterNoInternetMessage": "Nie masz połączenia z Internetem!",
