--- a/src/Ryujinx/Assets/Locales/pt_BR.json
+++ b/src/Ryujinx/Assets/Locales/pt_BR.json
@@ -450,6 +450,7 @@
   "DialogUpdaterExtractionMessage": "Extraindo atualização...",
   "DialogUpdaterRenamingMessage": "Renomeando atualização...",
   "DialogUpdaterAddingFilesMessage": "Adicionando nova atualização...",
+  "DialogUpdaterShowChangelogMessage": "Mostrar changelog",
   "DialogUpdaterCompleteMessage": "Atualização concluída!",
   "DialogUpdaterRestartMessage": "Deseja reiniciar o Ryujinx agora?",
   "DialogUpdaterNoInternetMessage": "Você não está conectado à Internet!",
