--- a/src/Ryujinx/Assets/Locales/tr_TR.json
+++ b/src/Ryujinx/Assets/Locales/tr_TR.json
@@ -450,6 +450,7 @@
   "DialogUpdaterExtractionMessage": "Güncelleme Ayıklanıyor...",
   "DialogUpdaterRenamingMessage": "Güncelleme Yeniden Adlandırılıyor...",
   "DialogUpdaterAddingFilesMessage": "Yeni Güncelleme Ekleniyor...",
+  "DialogUpdaterShowChangelogMessage": "Değişiklikler Gösteriliyor...",
   "DialogUpdaterCompleteMessage": "Güncelleme Tamamlandı!",
   "DialogUpdaterRestartMessage": "Ryujinx'i şimdi yeniden başlatmak istiyor musunuz?",
   "DialogUpdaterNoInternetMessage": "İnternete bağlı değilsiniz!",
