--- a/src/Ryujinx/Assets/Locales/ar_SA.json
+++ b/src/Ryujinx/Assets/Locales/ar_SA.json
@@ -1,6 +1,7 @@
 {
   "Language": "اَلْعَرَبِيَّةُ",
   "MenuBarFileOpenApplet": "فتح التطبيق المصغر",
+  "MenuBarFileOpenAppletOpenMiiApplet": "فتح تطبيق تحرير Mii",
   "MenuBarFileOpenAppletOpenMiiAppletToolTip": "‫افتح تطبيق تحرير Mii في الوضع المستقل",
   "SettingsTabInputDirectMouseAccess": "الوصول المباشر للفأرة",
   "SettingsTabSystemMemoryManagerMode": "وضع إدارة الذاكرة:",
