--- a/src/Ryujinx/Assets/Locales/el_GR.json
+++ b/src/Ryujinx/Assets/Locales/el_GR.json
@@ -1,6 +1,7 @@
 {
   "Language": "Ελληνικά",
   "MenuBarFileOpenApplet": "Άνοιγμα Applet",
+  "MenuBarFileOpenAppletOpenMiiApplet": "Άνοιγμα Mii Editor Applet",
   "MenuBarFileOpenAppletOpenMiiAppletToolTip": "Άνοιγμα του Mii Editor Applet σε Αυτόνομη λειτουργία",
   "SettingsTabInputDirectMouseAccess": "Άμεση Πρόσβαση Ποντικιού",
   "SettingsTabSystemMemoryManagerMode": "Λειτουργία Διαχείρισης Μνήμης:",
