--- a/src/Ryujinx/Assets/Locales/en_US.json
+++ b/src/Ryujinx/Assets/Locales/en_US.json
@@ -1,6 +1,7 @@
 {
   "Language": "English (US)",
   "MenuBarFileOpenApplet": "Open Applet",
+  "MenuBarFileOpenAppletOpenMiiApplet": "Open Mii Applet",
   "MenuBarFileOpenAppletOpenMiiAppletToolTip": "Open Mii Editor Applet in Standalone mode",
   "SettingsTabInputDirectMouseAccess": "Direct Mouse Access",
   "SettingsTabSystemMemoryManagerMode": "Memory Manager Mode:",
