--- a/src/Ryujinx/Assets/Locales/fr_FR.json
+++ b/src/Ryujinx/Assets/Locales/fr_FR.json
@@ -1,6 +1,7 @@
 {
   "Language": "Français",
   "MenuBarFileOpenApplet": "Ouvrir un programme",
+  "MenuBarFileOpenAppletOpenMiiApplet": "Ouvrir l'éditeur Mii",
   "MenuBarFileOpenAppletOpenMiiAppletToolTip": "Ouvrir l'éditeur Mii en mode Standalone",
   "SettingsTabInputDirectMouseAccess": "Accès direct à la souris",
   "SettingsTabSystemMemoryManagerMode": "Mode de gestion de la mémoire :",
