--- a/src/Ryujinx/Assets/Locales/he_IL.json
+++ b/src/Ryujinx/Assets/Locales/he_IL.json
@@ -1,6 +1,7 @@
 {
   "Language": "עִברִית",
   "MenuBarFileOpenApplet": "פתח יישומון",
+  "MenuBarFileOpenAppletOpenMiiApplet": "פתח את יישומון Mii",
   "MenuBarFileOpenAppletOpenMiiAppletToolTip": "פתח את יישומון עורך ה- Mii במצב עצמאי",
   "SettingsTabInputDirectMouseAccess": "גישה ישירה לעכבר",
   "SettingsTabSystemMemoryManagerMode": "מצב מנהל זיכרון:",
