--- a/src/Ryujinx/Assets/Locales/it_IT.json
+++ b/src/Ryujinx/Assets/Locales/it_IT.json
@@ -1,6 +1,7 @@
 {
   "Language": "Italiano",
   "MenuBarFileOpenApplet": "Apri applet",
+  "MenuBarFileOpenAppletOpenMiiApplet": "Apri Mii Editor",
   "MenuBarFileOpenAppletOpenMiiAppletToolTip": "Apri l'applet Mii Editor in modalità Standalone",
   "SettingsTabInputDirectMouseAccess": "Accesso diretto al mouse",
   "SettingsTabSystemMemoryManagerMode": "Modalità di gestione della memoria:",
