--- a/src/Ryujinx/Assets/Locales/pl_PL.json
+++ b/src/Ryujinx/Assets/Locales/pl_PL.json
@@ -1,6 +1,7 @@
 {
   "Language": "Polski",
   "MenuBarFileOpenApplet": "Otwórz Aplet",
+  "MenuBarFileOpenAppletOpenMiiApplet": "Otwórz Mii Editor",
   "MenuBarFileOpenAppletOpenMiiAppletToolTip": "Otwórz aplet Mii Editor w trybie indywidualnym",
   "SettingsTabInputDirectMouseAccess": "Bezpośredni dostęp do myszy",
   "SettingsTabSystemMemoryManagerMode": "Tryb menedżera pamięci:",
