--- a/src/Ryujinx/Assets/Locales/pt_BR.json
+++ b/src/Ryujinx/Assets/Locales/pt_BR.json
@@ -1,6 +1,7 @@
 {
   "Language": "Português (BR)",
   "MenuBarFileOpenApplet": "Abrir Applet",
+  "MenuBarFileOpenAppletOpenMiiApplet": "Abrir Mii Applet",
   "MenuBarFileOpenAppletOpenMiiAppletToolTip": "Abrir editor Mii em modo avulso",
   "SettingsTabInputDirectMouseAccess": "Acesso direto ao mouse",
   "SettingsTabSystemMemoryManagerMode": "Modo de gerenciamento de memória:",
