--- a/src/Ryujinx/Assets/Locales/th_TH.json
+++ b/src/Ryujinx/Assets/Locales/th_TH.json
@@ -1,6 +1,7 @@
 {
   "Language": "ภาษาไทย",
   "MenuBarFileOpenApplet": "เปิด Applet",
+  "MenuBarFileOpenAppletOpenMiiApplet": "เปิด Mii Editor Applet",
   "MenuBarFileOpenAppletOpenMiiAppletToolTip": "เปิดโปรแกรม Mii Editor Applet",
   "SettingsTabInputDirectMouseAccess": "เข้าถึงเมาส์ได้โดยตรง",
   "SettingsTabSystemMemoryManagerMode": "โหมดจัดการหน่วยความจำ:",
