--- a/src/Ryujinx/Assets/Locales/tr_TR.json
+++ b/src/Ryujinx/Assets/Locales/tr_TR.json
@@ -1,6 +1,7 @@
 {
   "Language": "Türkçe",
   "MenuBarFileOpenApplet": "Applet'i Aç",
+  "MenuBarFileOpenAppletOpenMiiApplet": "Mii Editör Applet'ini Aç",
   "MenuBarFileOpenAppletOpenMiiAppletToolTip": "Mii Editör Applet'ini Bağımsız Mod'da Aç",
   "SettingsTabInputDirectMouseAccess": "Doğrudan Mouse Erişimi",
   "SettingsTabSystemMemoryManagerMode": "Hafıza Yönetim Modu:",
