--- a/src/Ryujinx/Assets/Locales/de_DE.json
+++ b/src/Ryujinx/Assets/Locales/de_DE.json
@@ -141,7 +141,18 @@
   "SettingsTabSystemSystemLanguageTraditionalChinese": "Traditionelles Chinesisch",
   "SettingsTabSystemSystemTimeZone": "System-Zeitzone:",
   "SettingsTabSystemSystemTime": "Systemzeit:",
-  "SettingsTabSystemEnableVsync": "VSync",
+  "SettingsTabSystemVSyncMode": "VSync:",
+  "SettingsTabSystemEnableCustomVSyncInterval": "Enable custom refresh rate (Experimental)",
+  "SettingsTabSystemVSyncModeSwitch": "Switch",
+  "SettingsTabSystemVSyncModeUnbounded": "Unbounded",
+  "SettingsTabSystemVSyncModeCustom": "Custom Refresh Rate",
+  "SettingsTabSystemVSyncModeTooltip": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate.",
+  "SettingsTabSystemVSyncModeTooltipCustom": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate. 'Custom' emulates the specified custom refresh rate.",
+  "SettingsTabSystemEnableCustomVSyncIntervalTooltip": "Allows the user to specify an emulated refresh rate. In some titles, this may speed up or slow down the rate of gameplay logic. In other titles, it may allow for capping FPS at some multiple of the refresh rate, or lead to unpredictable behavior. This is an experimental feature, with no guarantees for how gameplay will be affected. \n\nLeave OFF if unsure.",
+  "SettingsTabSystemCustomVSyncIntervalValueTooltip": "The custom refresh rate target value.",
+  "SettingsTabSystemCustomVSyncIntervalSliderTooltip": "The custom refresh rate, as a percentage of the normal Switch refresh rate.",
+  "SettingsTabSystemCustomVSyncIntervalPercentage": "Custom Refresh Rate %:",
+  "SettingsTabSystemCustomVSyncIntervalValue": "Custom Refresh Rate Value:",
   "SettingsTabSystemEnablePptc": "PPTC (Profiled Persistent Translation Cache)",
   "SettingsTabSystemEnableLowPowerPptc": "Kleinleistungs-PPTC",
   "SettingsTabSystemEnableFsIntegrityChecks": "FS Integritätsprüfung",
@@ -706,11 +717,13 @@
   "RyujinxUpdater": "Ryujinx - Updater",
   "SettingsTabHotkeys": "Tastatur-Hotkeys",
   "SettingsTabHotkeysHotkeys": "Tastatur-Hotkeys",
-  "SettingsTabHotkeysToggleVsyncHotkey": "VSync:",
+  "SettingsTabHotkeysToggleVSyncModeHotkey": "VSync:",
   "SettingsTabHotkeysScreenshotHotkey": "Screenshot:",
   "SettingsTabHotkeysShowUiHotkey": "Zeige UI:",
   "SettingsTabHotkeysPauseHotkey": "Pausieren:",
   "SettingsTabHotkeysToggleMuteHotkey": "Stummschalten:",
+  "SettingsTabHotkeysIncrementCustomVSyncIntervalHotkey": "Raise custom refresh rate",
+  "SettingsTabHotkeysDecrementCustomVSyncIntervalHotkey": "Lower custom refresh rate",
   "ControllerMotionTitle": "Bewegungssteuerung - Einstellungen",
   "ControllerRumbleTitle": "Vibration - Einstellungen",
   "SettingsSelectThemeFileDialogTitle": "Wähle ein Design für die Emulator-Benutzeroberfläche",
