--- a/src/Ryujinx/Assets/Locales/el_GR.json
+++ b/src/Ryujinx/Assets/Locales/el_GR.json
@@ -141,7 +141,18 @@
   "SettingsTabSystemSystemLanguageTraditionalChinese": "Παραδοσιακά Κινεζικά",
   "SettingsTabSystemSystemTimeZone": "Ζώνη Ώρας Συστήματος:",
   "SettingsTabSystemSystemTime": "Ώρα Συστήματος:",
-  "SettingsTabSystemEnableVsync": "Ενεργοποίηση Κατακόρυφου Συγχρονισμού",
+  "SettingsTabSystemVSyncMode": "VSync:",
+  "SettingsTabSystemEnableCustomVSyncInterval": "Enable custom refresh rate (Experimental)",
+  "SettingsTabSystemVSyncModeSwitch": "Switch",
+  "SettingsTabSystemVSyncModeUnbounded": "Unbounded",
+  "SettingsTabSystemVSyncModeCustom": "Custom Refresh Rate",
+  "SettingsTabSystemVSyncModeTooltip": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate.",
+  "SettingsTabSystemVSyncModeTooltipCustom": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate. 'Custom' emulates the specified custom refresh rate.",
+  "SettingsTabSystemEnableCustomVSyncIntervalTooltip": "Allows the user to specify an emulated refresh rate. In some titles, this may speed up or slow down the rate of gameplay logic. In other titles, it may allow for capping FPS at some multiple of the refresh rate, or lead to unpredictable behavior. This is an experimental feature, with no guarantees for how gameplay will be affected. \n\nLeave OFF if unsure.",
+  "SettingsTabSystemCustomVSyncIntervalValueTooltip": "The custom refresh rate target value.",
+  "SettingsTabSystemCustomVSyncIntervalSliderTooltip": "The custom refresh rate, as a percentage of the normal Switch refresh rate.",
+  "SettingsTabSystemCustomVSyncIntervalPercentage": "Custom Refresh Rate %:",
+  "SettingsTabSystemCustomVSyncIntervalValue": "Custom Refresh Rate Value:",
   "SettingsTabSystemEnablePptc": "Ενεργοποίηση PPTC (Profiled Persistent Translation Cache)",
   "SettingsTabSystemEnableLowPowerPptc": "Low-power PPTC",
   "SettingsTabSystemEnableFsIntegrityChecks": "Ενεργοποίηση Ελέγχων Ακεραιότητας FS",
@@ -706,11 +717,13 @@
   "RyujinxUpdater": "Ryujinx Ενημερωτής",
   "SettingsTabHotkeys": "Συντομεύσεις Πληκτρολογίου",
   "SettingsTabHotkeysHotkeys": "Συντομεύσεις Πληκτρολογίου",
-  "SettingsTabHotkeysToggleVsyncHotkey": "Εναλλαγή VSync:",
+  "SettingsTabHotkeysToggleVSyncModeHotkey": "Εναλλαγή VSync:",
   "SettingsTabHotkeysScreenshotHotkey": "Στιγμιότυπο Οθόνης:",
   "SettingsTabHotkeysShowUiHotkey": "Εμφάνιση Διεπαφής Χρήστη:",
   "SettingsTabHotkeysPauseHotkey": "Παύση:",
   "SettingsTabHotkeysToggleMuteHotkey": "Σίγαση:",
+  "SettingsTabHotkeysIncrementCustomVSyncIntervalHotkey": "Raise custom refresh rate",
+  "SettingsTabHotkeysDecrementCustomVSyncIntervalHotkey": "Lower custom refresh rate",
   "ControllerMotionTitle": "Ρυθμίσεις Ελέγχου Κίνησης",
   "ControllerRumbleTitle": "Ρυθμίσεις Δόνησης",
   "SettingsSelectThemeFileDialogTitle": "Επιλογή Αρχείου Θέματος",
