--- a/src/Ryujinx/Assets/Locales/fr_FR.json
+++ b/src/Ryujinx/Assets/Locales/fr_FR.json
@@ -141,7 +141,18 @@
   "SettingsTabSystemSystemLanguageTraditionalChinese": "Chinois traditionnel",
   "SettingsTabSystemSystemTimeZone": "Fuseau horaire du système :",
   "SettingsTabSystemSystemTime": "Heure du système :",
-  "SettingsTabSystemEnableVsync": "Synchronisation verticale (VSync)",
+  "SettingsTabSystemVSyncMode": "VSync:",
+  "SettingsTabSystemEnableCustomVSyncInterval": "Enable custom refresh rate (Experimental)",
+  "SettingsTabSystemVSyncModeSwitch": "Switch",
+  "SettingsTabSystemVSyncModeUnbounded": "Unbounded",
+  "SettingsTabSystemVSyncModeCustom": "Custom Refresh Rate",
+  "SettingsTabSystemVSyncModeTooltip": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate.",
+  "SettingsTabSystemVSyncModeTooltipCustom": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate. 'Custom' emulates the specified custom refresh rate.",
+  "SettingsTabSystemEnableCustomVSyncIntervalTooltip": "Allows the user to specify an emulated refresh rate. In some titles, this may speed up or slow down the rate of gameplay logic. In other titles, it may allow for capping FPS at some multiple of the refresh rate, or lead to unpredictable behavior. This is an experimental feature, with no guarantees for how gameplay will be affected. \n\nLeave OFF if unsure.",
+  "SettingsTabSystemCustomVSyncIntervalValueTooltip": "The custom refresh rate target value.",
+  "SettingsTabSystemCustomVSyncIntervalSliderTooltip": "The custom refresh rate, as a percentage of the normal Switch refresh rate.",
+  "SettingsTabSystemCustomVSyncIntervalPercentage": "Custom Refresh Rate %:",
+  "SettingsTabSystemCustomVSyncIntervalValue": "Custom Refresh Rate Value:",
   "SettingsTabSystemEnablePptc": "Activer le PPTC (Profiled Persistent Translation Cache)",
   "SettingsTabSystemEnableLowPowerPptc": "PPTC à faible puissance",
   "SettingsTabSystemEnableFsIntegrityChecks": "Activer la vérification de l'intégrité du système de fichiers",
@@ -706,11 +717,13 @@
   "RyujinxUpdater": "Mise à jour de Ryujinx",
   "SettingsTabHotkeys": "Raccourcis clavier",
   "SettingsTabHotkeysHotkeys": "Raccourcis clavier",
-  "SettingsTabHotkeysToggleVsyncHotkey": "Activer/désactiver la VSync :",
+  "SettingsTabHotkeysToggleVSyncModeHotkey": "Activer/désactiver la VSync :",
   "SettingsTabHotkeysScreenshotHotkey": "Capture d'écran :",
   "SettingsTabHotkeysShowUiHotkey": "Afficher UI :",
   "SettingsTabHotkeysPauseHotkey": "Suspendre :",
   "SettingsTabHotkeysToggleMuteHotkey": "Couper le son :",
+  "SettingsTabHotkeysIncrementCustomVSyncIntervalHotkey": "Raise custom refresh rate",
+  "SettingsTabHotkeysDecrementCustomVSyncIntervalHotkey": "Lower custom refresh rate",
   "ControllerMotionTitle": "Réglages des contrôles par mouvement",
   "ControllerRumbleTitle": "Paramètres de vibration",
   "SettingsSelectThemeFileDialogTitle": "Sélectionner un fichier de thème",
