--- a/src/Ryujinx/Assets/Locales/pt_BR.json
+++ b/src/Ryujinx/Assets/Locales/pt_BR.json
@@ -141,7 +141,18 @@
   "SettingsTabSystemSystemLanguageTraditionalChinese": "Chinês tradicional",
   "SettingsTabSystemSystemTimeZone": "Fuso horário do sistema:",
   "SettingsTabSystemSystemTime": "Hora do sistema:",
-  "SettingsTabSystemEnableVsync": "Habilitar sincronia vertical",
+  "SettingsTabSystemVSyncMode": "VSync:",
+  "SettingsTabSystemEnableCustomVSyncInterval": "Enable custom refresh rate (Experimental)",
+  "SettingsTabSystemVSyncModeSwitch": "Switch",
+  "SettingsTabSystemVSyncModeUnbounded": "Unbounded",
+  "SettingsTabSystemVSyncModeCustom": "Custom Refresh Rate",
+  "SettingsTabSystemVSyncModeTooltip": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate.",
+  "SettingsTabSystemVSyncModeTooltipCustom": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate. 'Custom' emulates the specified custom refresh rate.",
+  "SettingsTabSystemEnableCustomVSyncIntervalTooltip": "Allows the user to specify an emulated refresh rate. In some titles, this may speed up or slow down the rate of gameplay logic. In other titles, it may allow for capping FPS at some multiple of the refresh rate, or lead to unpredictable behavior. This is an experimental feature, with no guarantees for how gameplay will be affected. \n\nLeave OFF if unsure.",
+  "SettingsTabSystemCustomVSyncIntervalValueTooltip": "The custom refresh rate target value.",
+  "SettingsTabSystemCustomVSyncIntervalSliderTooltip": "The custom refresh rate, as a percentage of the normal Switch refresh rate.",
+  "SettingsTabSystemCustomVSyncIntervalPercentage": "Custom Refresh Rate %:",
+  "SettingsTabSystemCustomVSyncIntervalValue": "Custom Refresh Rate Value:",
   "SettingsTabSystemEnablePptc": "Habilitar PPTC (Profiled Persistent Translation Cache)",
   "SettingsTabSystemEnableLowPowerPptc": "Low-power PPTC",
   "SettingsTabSystemEnableFsIntegrityChecks": "Habilitar verificação de integridade do sistema de arquivos",
@@ -706,11 +717,13 @@
   "RyujinxUpdater": "Atualizador do Ryujinx",
   "SettingsTabHotkeys": "Atalhos do teclado",
   "SettingsTabHotkeysHotkeys": "Atalhos do teclado",
-  "SettingsTabHotkeysToggleVsyncHotkey": "Mudar VSync:",
+  "SettingsTabHotkeysToggleVSyncModeHotkey": "Mudar VSync:",
   "SettingsTabHotkeysScreenshotHotkey": "Captura de tela:",
   "SettingsTabHotkeysShowUiHotkey": "Exibir UI:",
   "SettingsTabHotkeysPauseHotkey": "Pausar:",
   "SettingsTabHotkeysToggleMuteHotkey": "Mudo:",
+  "SettingsTabHotkeysIncrementCustomVSyncIntervalHotkey": "Raise custom refresh rate",
+  "SettingsTabHotkeysDecrementCustomVSyncIntervalHotkey": "Lower custom refresh rate",
   "ControllerMotionTitle": "Configurações do controle de movimento",
   "ControllerRumbleTitle": "Configurações de vibração",
   "SettingsSelectThemeFileDialogTitle": "Selecionar arquivo do tema",
