--- a/src/Ryujinx/Assets/Locales/ru_RU.json
+++ b/src/Ryujinx/Assets/Locales/ru_RU.json
@@ -141,7 +141,18 @@
   "SettingsTabSystemSystemLanguageTraditionalChinese": "Китайский (традиционный)",
   "SettingsTabSystemSystemTimeZone": "Часовой пояс прошивки:",
   "SettingsTabSystemSystemTime": "Системное время в прошивке:",
-  "SettingsTabSystemEnableVsync": "Вертикальная синхронизация",
+  "SettingsTabSystemVSyncMode": "VSync:",
+  "SettingsTabSystemEnableCustomVSyncInterval": "Enable custom refresh rate (Experimental)",
+  "SettingsTabSystemVSyncModeSwitch": "Switch",
+  "SettingsTabSystemVSyncModeUnbounded": "Unbounded",
+  "SettingsTabSystemVSyncModeCustom": "Custom Refresh Rate",
+  "SettingsTabSystemVSyncModeTooltip": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate.",
+  "SettingsTabSystemVSyncModeTooltipCustom": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate. 'Custom' emulates the specified custom refresh rate.",
+  "SettingsTabSystemEnableCustomVSyncIntervalTooltip": "Allows the user to specify an emulated refresh rate. In some titles, this may speed up or slow down the rate of gameplay logic. In other titles, it may allow for capping FPS at some multiple of the refresh rate, or lead to unpredictable behavior. This is an experimental feature, with no guarantees for how gameplay will be affected. \n\nLeave OFF if unsure.",
+  "SettingsTabSystemCustomVSyncIntervalValueTooltip": "The custom refresh rate target value.",
+  "SettingsTabSystemCustomVSyncIntervalSliderTooltip": "The custom refresh rate, as a percentage of the normal Switch refresh rate.",
+  "SettingsTabSystemCustomVSyncIntervalPercentage": "Custom Refresh Rate %:",
+  "SettingsTabSystemCustomVSyncIntervalValue": "Custom Refresh Rate Value:",
   "SettingsTabSystemEnablePptc": "Использовать PPTC (Profiled Persistent Translation Cache)",
   "SettingsTabSystemEnableLowPowerPptc": "Low-power PPTC",
   "SettingsTabSystemEnableFsIntegrityChecks": "Проверка целостности файловой системы",
@@ -706,11 +717,13 @@
   "RyujinxUpdater": "Ryujinx - Обновление",
   "SettingsTabHotkeys": "Горячие клавиши",
   "SettingsTabHotkeysHotkeys": "Горячие клавиши",
-  "SettingsTabHotkeysToggleVsyncHotkey": "Вертикальная синхронизация:",
+  "SettingsTabHotkeysToggleVSyncModeHotkey": "Вертикальная синхронизация:",
   "SettingsTabHotkeysScreenshotHotkey": "Сделать скриншот:",
   "SettingsTabHotkeysShowUiHotkey": "Показать интерфейс:",
   "SettingsTabHotkeysPauseHotkey": "Пауза эмуляции:",
   "SettingsTabHotkeysToggleMuteHotkey": "Выключить звук:",
+  "SettingsTabHotkeysIncrementCustomVSyncIntervalHotkey": "Raise custom refresh rate",
+  "SettingsTabHotkeysDecrementCustomVSyncIntervalHotkey": "Lower custom refresh rate",
   "ControllerMotionTitle": "Настройки управления движением",
   "ControllerRumbleTitle": "Настройки вибрации",
   "SettingsSelectThemeFileDialogTitle": "Выбрать файл темы",
