--- a/src/Ryujinx/Assets/Locales/th_TH.json
+++ b/src/Ryujinx/Assets/Locales/th_TH.json
@@ -141,7 +141,18 @@
   "SettingsTabSystemSystemLanguageTraditionalChinese": "จีน (ดั้งเดิม)",
   "SettingsTabSystemSystemTimeZone": "เขตเวลาของระบบ:",
   "SettingsTabSystemSystemTime": "เวลาของระบบ:",
-  "SettingsTabSystemEnableVsync": "VSync",
+  "SettingsTabSystemVSyncMode": "VSync:",
+  "SettingsTabSystemEnableCustomVSyncInterval": "Enable custom refresh rate (Experimental)",
+  "SettingsTabSystemVSyncModeSwitch": "Switch",
+  "SettingsTabSystemVSyncModeUnbounded": "Unbounded",
+  "SettingsTabSystemVSyncModeCustom": "Custom Refresh Rate",
+  "SettingsTabSystemVSyncModeTooltip": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate.",
+  "SettingsTabSystemVSyncModeTooltipCustom": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate. 'Custom' emulates the specified custom refresh rate.",
+  "SettingsTabSystemEnableCustomVSyncIntervalTooltip": "Allows the user to specify an emulated refresh rate. In some titles, this may speed up or slow down the rate of gameplay logic. In other titles, it may allow for capping FPS at some multiple of the refresh rate, or lead to unpredictable behavior. This is an experimental feature, with no guarantees for how gameplay will be affected. \n\nLeave OFF if unsure.",
+  "SettingsTabSystemCustomVSyncIntervalValueTooltip": "The custom refresh rate target value.",
+  "SettingsTabSystemCustomVSyncIntervalSliderTooltip": "The custom refresh rate, as a percentage of the normal Switch refresh rate.",
+  "SettingsTabSystemCustomVSyncIntervalPercentage": "Custom Refresh Rate %:",
+  "SettingsTabSystemCustomVSyncIntervalValue": "Custom Refresh Rate Value:",
   "SettingsTabSystemEnablePptc": "PPTC (แคชโปรไฟล์การแปลแบบถาวร)",
   "SettingsTabSystemEnableLowPowerPptc": "PPTC แบบพลังงานตํ่า",
   "SettingsTabSystemEnableFsIntegrityChecks": "ตรวจสอบความถูกต้องของ FS",
@@ -706,11 +717,13 @@
   "RyujinxUpdater": "ตัวอัปเดต Ryujinx",
   "SettingsTabHotkeys": "ปุ่มลัดของคีย์บอร์ด",
   "SettingsTabHotkeysHotkeys": "ปุ่มลัดของคีย์บอร์ด",
-  "SettingsTabHotkeysToggleVsyncHotkey": "สลับเป็น VSync:",
+  "SettingsTabHotkeysToggleVSyncModeHotkey": "สลับเป็น VSync:",
   "SettingsTabHotkeysScreenshotHotkey": "ภาพหน้าจอ:",
   "SettingsTabHotkeysShowUiHotkey": "แสดง UI:",
   "SettingsTabHotkeysPauseHotkey": "หยุดชั่วคราว:",
   "SettingsTabHotkeysToggleMuteHotkey": "ปิดเสียง:",
+  "SettingsTabHotkeysIncrementCustomVSyncIntervalHotkey": "Raise custom refresh rate",
+  "SettingsTabHotkeysDecrementCustomVSyncIntervalHotkey": "Lower custom refresh rate",
   "ControllerMotionTitle": "ตั้งค่าควบคุมการเคลื่อนไหว",
   "ControllerRumbleTitle": "ตั้งค่าการสั่นไหว",
   "SettingsSelectThemeFileDialogTitle": "เลือกธีมไฟล์",
