--- a/src/Ryujinx/Assets/Locales/zh_CN.json
+++ b/src/Ryujinx/Assets/Locales/zh_CN.json
@@ -141,7 +141,18 @@
   "SettingsTabSystemSystemLanguageTraditionalChinese": "繁体中文（推荐）",
   "SettingsTabSystemSystemTimeZone": "系统时区：",
   "SettingsTabSystemSystemTime": "系统时钟：",
-  "SettingsTabSystemEnableVsync": "启用垂直同步",
+  "SettingsTabSystemVSyncMode": "VSync:",
+  "SettingsTabSystemEnableCustomVSyncInterval": "Enable custom refresh rate (Experimental)",
+  "SettingsTabSystemVSyncModeSwitch": "Switch",
+  "SettingsTabSystemVSyncModeUnbounded": "Unbounded",
+  "SettingsTabSystemVSyncModeCustom": "Custom Refresh Rate",
+  "SettingsTabSystemVSyncModeTooltip": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate.",
+  "SettingsTabSystemVSyncModeTooltipCustom": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate. 'Custom' emulates the specified custom refresh rate.",
+  "SettingsTabSystemEnableCustomVSyncIntervalTooltip": "Allows the user to specify an emulated refresh rate. In some titles, this may speed up or slow down the rate of gameplay logic. In other titles, it may allow for capping FPS at some multiple of the refresh rate, or lead to unpredictable behavior. This is an experimental feature, with no guarantees for how gameplay will be affected. \n\nLeave OFF if unsure.",
+  "SettingsTabSystemCustomVSyncIntervalValueTooltip": "The custom refresh rate target value.",
+  "SettingsTabSystemCustomVSyncIntervalSliderTooltip": "The custom refresh rate, as a percentage of the normal Switch refresh rate.",
+  "SettingsTabSystemCustomVSyncIntervalPercentage": "Custom Refresh Rate %:",
+  "SettingsTabSystemCustomVSyncIntervalValue": "Custom Refresh Rate Value:",
   "SettingsTabSystemEnablePptc": "开启 PPTC 缓存",
   "SettingsTabSystemEnableLowPowerPptc": "Low-power PPTC",
   "SettingsTabSystemEnableFsIntegrityChecks": "启用文件系统完整性检查",
@@ -707,11 +718,13 @@
   "RyujinxUpdater": "Ryujinx 更新",
   "SettingsTabHotkeys": "快捷键",
   "SettingsTabHotkeysHotkeys": "键盘快捷键",
-  "SettingsTabHotkeysToggleVsyncHotkey": "开启或关闭垂直同步：",
+  "SettingsTabHotkeysToggleVSyncModeHotkey": "开启或关闭垂直同步：",
   "SettingsTabHotkeysScreenshotHotkey": "保存截屏：",
   "SettingsTabHotkeysShowUiHotkey": "隐藏菜单栏和状态栏：",
   "SettingsTabHotkeysPauseHotkey": "暂停：",
   "SettingsTabHotkeysToggleMuteHotkey": "静音：",
+  "SettingsTabHotkeysIncrementCustomVSyncIntervalHotkey": "Raise custom refresh rate",
+  "SettingsTabHotkeysDecrementCustomVSyncIntervalHotkey": "Lower custom refresh rate",
   "ControllerMotionTitle": "体感设置",
   "ControllerRumbleTitle": "震动设置",
   "SettingsSelectThemeFileDialogTitle": "选择主题文件",
