--- a/src/Ryujinx/Assets/Locales/zh_TW.json
+++ b/src/Ryujinx/Assets/Locales/zh_TW.json
@@ -141,7 +141,18 @@
   "SettingsTabSystemSystemLanguageTraditionalChinese": "正體中文 (建議)",
   "SettingsTabSystemSystemTimeZone": "系統時區:",
   "SettingsTabSystemSystemTime": "系統時鐘:",
-  "SettingsTabSystemEnableVsync": "垂直同步",
+  "SettingsTabSystemVSyncMode": "VSync:",
+  "SettingsTabSystemEnableCustomVSyncInterval": "Enable custom refresh rate (Experimental)",
+  "SettingsTabSystemVSyncModeSwitch": "Switch",
+  "SettingsTabSystemVSyncModeUnbounded": "Unbounded",
+  "SettingsTabSystemVSyncModeCustom": "Custom Refresh Rate",
+  "SettingsTabSystemVSyncModeTooltip": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate.",
+  "SettingsTabSystemVSyncModeTooltipCustom": "Emulated Vertical Sync. 'Switch' emulates the Switch's refresh rate of 60Hz. 'Unbounded' is an unbounded refresh rate. 'Custom' emulates the specified custom refresh rate.",
+  "SettingsTabSystemEnableCustomVSyncIntervalTooltip": "Allows the user to specify an emulated refresh rate. In some titles, this may speed up or slow down the rate of gameplay logic. In other titles, it may allow for capping FPS at some multiple of the refresh rate, or lead to unpredictable behavior. This is an experimental feature, with no guarantees for how gameplay will be affected. \n\nLeave OFF if unsure.",
+  "SettingsTabSystemCustomVSyncIntervalValueTooltip": "The custom refresh rate target value.",
+  "SettingsTabSystemCustomVSyncIntervalSliderTooltip": "The custom refresh rate, as a percentage of the normal Switch refresh rate.",
+  "SettingsTabSystemCustomVSyncIntervalPercentage": "Custom Refresh Rate %:",
+  "SettingsTabSystemCustomVSyncIntervalValue": "Custom Refresh Rate Value:",
   "SettingsTabSystemEnablePptc": "PPTC (剖析式持久轉譯快取, Profiled Persistent Translation Cache)",
   "SettingsTabSystemEnableLowPowerPptc": "低功耗 PPTC",
   "SettingsTabSystemEnableFsIntegrityChecks": "檔案系統完整性檢查",
@@ -706,11 +717,13 @@
   "RyujinxUpdater": "Ryujinx 更新程式",
   "SettingsTabHotkeys": "鍵盤快速鍵",
   "SettingsTabHotkeysHotkeys": "鍵盤快捷鍵",
-  "SettingsTabHotkeysToggleVsyncHotkey": "切換垂直同步:",
+  "SettingsTabHotkeysToggleVSyncModeHotkey": "切換垂直同步:",
   "SettingsTabHotkeysScreenshotHotkey": "擷取畫面:",
   "SettingsTabHotkeysShowUiHotkey": "顯示 UI:",
   "SettingsTabHotkeysPauseHotkey": "暫停:",
   "SettingsTabHotkeysToggleMuteHotkey": "靜音:",
+  "SettingsTabHotkeysIncrementCustomVSyncIntervalHotkey": "Raise custom refresh rate",
+  "SettingsTabHotkeysDecrementCustomVSyncIntervalHotkey": "Lower custom refresh rate",
   "ControllerMotionTitle": "體感控制設定",
   "ControllerRumbleTitle": "震動設定",
   "SettingsSelectThemeFileDialogTitle": "選取佈景主題檔案",
